Finishing Up Comments

--- a/JAM.html
+++ b/JAM.html
@@ -2,18 +2,8 @@
 <html lang="en">
   <head>
     <!-- Preloading images for faster loading -->
-    <link
-      rel="preload"
-      href="./images/websitebanner.webp"
-      as="image"
-      fetchpriority="high"
-    />
-    <link
-      rel="preload"
-      href="./images/websitebanner.jpg"
-      as="image"
-      fetchpriority="high"
-    />
+    <link rel="preload" href="./images/websitebanner.webp" as="image" fetchpriority="high" />
+    <link rel="preload" href="./images/websitebanner.jpg" as="image" fetchpriority="high" />
 
     <!-- Linking required Javascript files -->
     <script src="navbar.js" defer></script>
@@ -23,26 +13,20 @@
     <!-- Linking required CSS files -->
     <link
       rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
-    />
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" />
     <link
       rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/@tarekraafat/autocomplete.js@10.2.7/dist/css/autoComplete.01.min.css"
-    />
+      href="https://cdn.jsdelivr.net/npm/@tarekraafat/autocomplete.js@10.2.7/dist/css/autoComplete.01.min.css" />
     <link rel="stylesheet" href="./index.css" />
 
     <!-- Setting metadata -->
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>JAM - Van Meter United Methodist Church</title>
-    <meta
-      name="keywords"
-      content="Van Meter United Methodist Church, Van Meter, VMUMC"
-    />
+    <meta name="keywords" content="Van Meter United Methodist Church, Van Meter, VMUMC" />
     <meta
       name="description"
-      content="The Van Meter United Methodist Church site provides users with dates, times and details for the worship and fellowship of the congregation."
-    />
+      content="The Van Meter United Methodist Church site provides users with dates, times and details for the worship and fellowship of the congregation." />
     <!-- Setting icon -->
     <link rel="icon" href="./images/umc-logo.png" />
   </head>
@@ -62,15 +46,11 @@
 
     <!-- Navbar section -->
     <div id="navbar-container" class="container mx-auto p-0">
-      <nav
-        class="navbar navbar-expand-lg navbar-dark bg-dark"
-        aria-label="Fifth navbar example"
-      >
+      <nav class="navbar navbar-expand-lg navbar-dark bg-dark" aria-label="Fifth navbar example">
         <div class="container-fluid">
           <!-- Brand -->
           <a class="navbar-brand" href="#"
-            ><img height="24" width="24" src="./images/white+umc+logo.png" />
-            VMUMC</a
+            ><img height="24" width="24" src="./images/white+umc+logo.png" /> VMUMC</a
           >
           <button
             class="navbar-toggler"
@@ -79,8 +59,7 @@
             data-bs-target="#navbarsExample05"
             aria-controls="navbarsExample05"
             aria-expanded="false"
-            aria-label="Toggle navigation"
-          >
+            aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
 
@@ -106,39 +85,27 @@
                 <ul class="dropdown-menu dropdown-menu-dark bg-dark shadow">
                   <!-- Dropdown item -->
                   <li>
-                    <a class="dropdown-item" href="/directions.html">
-                      Church Directions
-                    </a>
+                    <a class="dropdown-item" href="/directions.html"> Church Directions </a>
                   </li>
                   <!-- Dropdown item -->
                   <li>
-                    <a class="dropdown-item" href="/community.html">
-                      Church Community
-                    </a>
+                    <a class="dropdown-item" href="/community.html"> Church Community </a>
                   </li>
                   <!-- Dropdown item -->
                   <li>
-                    <a class="dropdown-item" href="/services.html">
-                      Church Services
-                    </a>
+                    <a class="dropdown-item" href="/services.html"> Church Services </a>
                   </li>
                   <!-- Dropdown item -->
                   <li>
-                    <a class="dropdown-item" href="/education.html">
-                      Christian Education
-                    </a>
+                    <a class="dropdown-item" href="/education.html"> Christian Education </a>
                   </li>
                   <!-- Dropdown item -->
                   <li>
-                    <a class="dropdown-item" href="/staff.html">
-                      Church Staff
-                    </a>
+                    <a class="dropdown-item" href="/staff.html"> Church Staff </a>
                   </li>
                   <!-- Dropdown item -->
                   <li>
-                    <a class="dropdown-item" href="/beliefs.html">
-                      Church Beliefs
-                    </a>
+                    <a class="dropdown-item" href="/beliefs.html"> Church Beliefs </a>
                   </li>
                 </ul>
               </li>
@@ -174,15 +141,11 @@
                 <ul class="dropdown-menu dropdown-menu-dark bg-dark">
                   <!-- Dropdown item -->
                   <li>
-                    <a class="dropdown-item" href="/contact.html">
-                      Contact Info
-                    </a>
+                    <a class="dropdown-item" href="/contact.html"> Contact Info </a>
                   </li>
                   <!-- Dropdown item -->
                   <li>
-                    <a class="dropdown-item" href="/prayer-request.html">
-                      Prayer Request
-                    </a>
+                    <a class="dropdown-item" href="/prayer-request.html"> Prayer Request </a>
                   </li>
                   <!-- Dropdown item -->
                   <li>
@@ -215,8 +178,7 @@
                 autocorrect="off"
                 autocomplete="off"
                 autocapitalize="off"
-                placeholder="Search"
-              />
+                placeholder="Search" />
             </div>
           </div>
         </div>
@@ -224,78 +186,96 @@
     </div>
     <!-- Main content section -->
     <div class="container mx-auto px-3 bg pb-5">
+      <!-- Header -->
       <div class="row pt-5 mx-auto">
         <div class="col text-center">
           <h1>J.A.M</h1>
         </div>
       </div>
-      <div class="row mx-auto pt-3"><hr /></div>
+      <!-- Divider -->
+      <div class="row mx-auto pt-3">
+        <div class="col">
+          <hr />
+        </div>
+      </div>
+      <!-- Secondary Header -->
       <div class="row text-center pt-3 mx-auto">
         <div class="col text-center">
           <h4>Jesus and Me</h4>
         </div>
       </div>
+      <!-- JAM Section -->
       <div class="row pt-3 mx-auto">
+        <!-- Jam Section Texts -->
         <div class="col-lg-6 align-self-center">
+          <!-- Paragraph 1 -->
           <div class="row">
-            <strong
-              >Wednesday evenings: Kids' J.A.M. (Jesus and Me)<br />
-              6:00 PM: dinner<br />
-              6:30-7:30 PM: J.A.M program</strong
-            >
+            <div class="col">
+              <strong
+                >Wednesday evenings: Kids' J.A.M. (Jesus and Me)<br />
+                6:00 PM: dinner<br />
+                6:30-7:30 PM: J.A.M program</strong
+              >
+            </div>
           </div>
+          <!-- Paragraph 2 -->
           <div class="row pt-3">
-            <p>
-              Our Wednesday program, J.A.M. (Jesus and Me), is designed for
-              elementary-age children to learn the love of Jesus while having
-              fun. It is held (almost) every Wednesday through the school year.
-              Dinner is served at 6:00 and the program goes from 6:30-7:30.
-            </p>
+            <div class="col">
+              <p>
+                Our Wednesday program, J.A.M. (Jesus and Me), is designed for elementary-age
+                children to learn the love of Jesus while having fun. It is held (almost) every
+                Wednesday through the school year. Dinner is served at 6:00 and the program goes
+                from 6:30-7:30.
+              </p>
+            </div>
           </div>
+          <!-- Paragraph 3 -->
           <div class="row pt-3">
-            <p>Children are welcome to drop in.</p>
+            <div class="col">
+              <p>Children are welcome to drop in.</p>
+            </div>
           </div>
         </div>
+        <!-- Jam Section Image -->
         <div class="col-lg-6 text-center">
           <img
             class="w-75 rounded"
             src="./images/JAM_logo_black.jpg"
-            alt="JAM (Jesus and Me) Wednesday night kids' program at Van Meter UMC.  Image is a black cross on colorful paint splatter on black background."
-          />
+            alt="JAM (Jesus and Me) Wednesday night kids' program at Van Meter UMC.  Image is a black cross on colorful paint splatter on black background." />
         </div>
       </div>
-
+      <!-- Images Row -->
       <div class="row pt-3 mx-auto">
+        <!-- Image 1 -->
         <div class="col-lg-4 align-self-center">
           <img
             class="w-100 rounded"
             src="./images/JAMweb1.jpg"
-            alt="children play an egg-on-spoon game"
-          />
+            alt="children play an egg-on-spoon game" />
         </div>
+        <!-- Image 2 -->
         <div class="col-lg-4 align-self-center pt-3 pt-lg-0">
           <img
             class="w-100 rounded"
             src="./images/JAMweb2.jpg"
-            alt="children sitting on the floor in a circle"
-          />
+            alt="children sitting on the floor in a circle" />
         </div>
+        <!-- Image 3 -->
         <div class="col-lg-4 align-self-center pt-3 pt-lg-0">
           <img
             class="w-100 rounded"
             src="./images/JAMweb3.jpg"
-            alt="children playing floor game (camel carrying a load)"
-          />
+            alt="children playing floor game (camel carrying a load)" />
         </div>
       </div>
-
+      <!-- Images Row 2 -->
       <div class="row pt-3 mx-auto justify-content-center">
+        <!-- Image 4 -->
         <div class="col-lg-6 align-self-center pt-3 pt-lg-0 text-center">
           <img
             class="w-100 rounded"
             src="./images/JAMweb4.jpg"
-            alt="children at a round table listening to a story"
-          />
+            alt="children at a round table listening to a story" />
         </div>
       </div>
     </div>
@@ -303,20 +283,13 @@
     <footer class="mb-sm-3 container mx-auto p-0">
       <div class="row mx-auto bg-dark shadow text-white rounded-sm-bottom">
         <!-- UMC Logo -->
-        <div
-          class="col-lg-1 col-md-2 col-sm-12 mt-2 mb-2 align-self-center text-center"
-        >
-          <a href="#"
-            ><img height="60" width="60" src="./images/white+umc+logo.png"
-          /></a>
+        <div class="col-lg-1 col-md-2 col-sm-12 mt-2 mb-2 align-self-center text-center">
+          <a href="#"><img height="60" width="60" src="./images/white+umc+logo.png" /></a>
         </div>
         <!-- Copyright Info -->
-        <div
-          class="col-lg-8 col-md-10 col-sm-12 mt-2 align-self-center text-center text-md-start"
-        >
+        <div class="col-lg-8 col-md-10 col-sm-12 mt-2 align-self-center text-center text-md-start">
           <p>
-            &copy; <span id="year"></span> - Van Meter United Methodist Church.
-            All rights reserved.
+            &copy; <span id="year"></span> - Van Meter United Methodist Church. All rights reserved.
           </p>
         </div>
         <!-- Social Media Text -->
@@ -324,9 +297,7 @@
           <p>Stay Connected</p>
         </div>
         <!-- Social Media Image -->
-        <div
-          class="col-lg-1 mt-2 ps-lg-0 mb-3 text-center text-lg-start align-self-center"
-        >
+        <div class="col-lg-1 mt-2 ps-lg-0 mb-3 text-center text-lg-start align-self-center">
           <a href="https://www.facebook.com/profile.php?id=100064317144537"
             ><img height="35" width="35" src="./images/facebook.png"
           /></a>
