--- a/VBS.html
+++ b/VBS.html
@@ -2,18 +2,8 @@
 <html lang="en">
   <head>
     <!-- Preloading images for faster loading -->
-    <link
-      rel="preload"
-      href="./images/websitebanner.webp"
-      as="image"
-      fetchpriority="high"
-    />
-    <link
-      rel="preload"
-      href="./images/websitebanner.jpg"
-      as="image"
-      fetchpriority="high"
-    />
+    <link rel="preload" href="./images/websitebanner.webp" as="image" fetchpriority="high" />
+    <link rel="preload" href="./images/websitebanner.jpg" as="image" fetchpriority="high" />
 
     <!-- Linking required Javascript files -->
     <script src="navbar.js" defer></script>
@@ -23,28 +13,20 @@
     <!-- Linking required CSS files -->
     <link
       rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
-    />
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" />
     <link
       rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/@tarekraafat/autocomplete.js@10.2.7/dist/css/autoComplete.01.min.css"
-    />
+      href="https://cdn.jsdelivr.net/npm/@tarekraafat/autocomplete.js@10.2.7/dist/css/autoComplete.01.min.css" />
     <link rel="stylesheet" href="./index.css" />
 
     <!-- Setting metadata -->
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>
-      VBS - Vacation Bible School - Van Meter United Methodist Church
-    </title>
-    <meta
-      name="keywords"
-      content="Van Meter United Methodist Church, Van Meter, VMUMC"
-    />
+    <title>VBS - Vacation Bible School - Van Meter United Methodist Church</title>
+    <meta name="keywords" content="Van Meter United Methodist Church, Van Meter, VMUMC" />
     <meta
       name="description"
-      content="The Van Meter United Methodist Church site provides users with dates, times and details for the worship and fellowship of the congregation."
-    />
+      content="The Van Meter United Methodist Church site provides users with dates, times and details for the worship and fellowship of the congregation." />
     <!-- Setting icon -->
     <link rel="icon" href="./images/umc-logo.png" />
   </head>
@@ -64,15 +46,11 @@
 
     <!-- Navbar section -->
     <div id="navbar-container" class="container mx-auto p-0">
-      <nav
-        class="navbar navbar-expand-lg navbar-dark bg-dark"
-        aria-label="Fifth navbar example"
-      >
+      <nav class="navbar navbar-expand-lg navbar-dark bg-dark" aria-label="Fifth navbar example">
         <div class="container-fluid">
           <!-- Brand -->
           <a class="navbar-brand" href="#"
-            ><img height="24" width="24" src="./images/white+umc+logo.png" />
-            VMUMC</a
+            ><img height="24" width="24" src="./images/white+umc+logo.png" /> VMUMC</a
           >
           <button
             class="navbar-toggler"
@@ -81,8 +59,7 @@
             data-bs-target="#navbarsExample05"
             aria-controls="navbarsExample05"
             aria-expanded="false"
-            aria-label="Toggle navigation"
-          >
+            aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
 
@@ -108,39 +85,27 @@
                 <ul class="dropdown-menu dropdown-menu-dark bg-dark shadow">
                   <!-- Dropdown item -->
                   <li>
-                    <a class="dropdown-item" href="/directions.html">
-                      Church Directions
-                    </a>
+                    <a class="dropdown-item" href="/directions.html"> Church Directions </a>
                   </li>
                   <!-- Dropdown item -->
                   <li>
-                    <a class="dropdown-item" href="/community.html">
-                      Church Community
-                    </a>
+                    <a class="dropdown-item" href="/community.html"> Church Community </a>
                   </li>
                   <!-- Dropdown item -->
                   <li>
-                    <a class="dropdown-item" href="/services.html">
-                      Church Services
-                    </a>
+                    <a class="dropdown-item" href="/services.html"> Church Services </a>
                   </li>
                   <!-- Dropdown item -->
                   <li>
-                    <a class="dropdown-item" href="/education.html">
-                      Christian Education
-                    </a>
+                    <a class="dropdown-item" href="/education.html"> Christian Education </a>
                   </li>
                   <!-- Dropdown item -->
                   <li>
-                    <a class="dropdown-item" href="/staff.html">
-                      Church Staff
-                    </a>
+                    <a class="dropdown-item" href="/staff.html"> Church Staff </a>
                   </li>
                   <!-- Dropdown item -->
                   <li>
-                    <a class="dropdown-item" href="/beliefs.html">
-                      Church Beliefs
-                    </a>
+                    <a class="dropdown-item" href="/beliefs.html"> Church Beliefs </a>
                   </li>
                 </ul>
               </li>
@@ -176,15 +141,11 @@
                 <ul class="dropdown-menu dropdown-menu-dark bg-dark">
                   <!-- Dropdown item -->
                   <li>
-                    <a class="dropdown-item" href="/contact.html">
-                      Contact Info
-                    </a>
+                    <a class="dropdown-item" href="/contact.html"> Contact Info </a>
                   </li>
                   <!-- Dropdown item -->
                   <li>
-                    <a class="dropdown-item" href="/prayer-request.html">
-                      Prayer Request
-                    </a>
+                    <a class="dropdown-item" href="/prayer-request.html"> Prayer Request </a>
                   </li>
                   <!-- Dropdown item -->
                   <li>
@@ -217,8 +178,7 @@
                 autocorrect="off"
                 autocomplete="off"
                 autocapitalize="off"
-                placeholder="Search"
-              />
+                placeholder="Search" />
             </div>
           </div>
         </div>
@@ -226,111 +186,120 @@
     </div>
     <!-- Main content section -->
     <div class="container mx-auto pb-5 bg">
+      <!-- Header -->
       <div class="row pt-5 mx-auto text-center">
-        <h1>VBS: Vacation Bible School</h1>
+        <div class="col">
+          <h1>VBS: Vacation Bible School</h1>
+        </div>
       </div>
+      <!-- Secondary Header -->
       <div class="row pt-3 mx-auto text-center">
-        <h3>What Is VBS?</h3>
+        <div class="col">
+          <h3>What Is VBS?</h3>
+        </div>
       </div>
+      <!-- Paragraph -->
       <div class="row pt-3 mx-auto">
-        <p>
-          VBS!!! It's the acronym for Vacation Bible School. Children ages 3 to
-          11 gather at church each evening for fun with a focus of learning more
-          about God. When we asked our children what they liked best about VBS
-          the answers were as varied as the VBS learning stations. Some liked
-          songs, some liked snacks, some liked the outdoor games, or crafts, or
-          science, or story time. With all that, what's not to like? Come and
-          enjoy the holy chaos of Vacation Bible School. All kids and stalwart
-          adults are welcome.
-        </p>
+        <div class="col">
+          <p>
+            VBS!!! It's the acronym for Vacation Bible School. Children ages 3 to 11 gather at
+            church each evening for fun with a focus of learning more about God. When we asked our
+            children what they liked best about VBS the answers were as varied as the VBS learning
+            stations. Some liked songs, some liked snacks, some liked the outdoor games, or crafts,
+            or science, or story time. With all that, what's not to like? Come and enjoy the holy
+            chaos of Vacation Bible School. All kids and stalwart adults are welcome.
+          </p>
+        </div>
       </div>
+      <!-- VBS Images Group 1 -->
       <div class="row pt-3 mx-auto text-center">
+        <!-- Image 1 -->
         <div class="col-12 col-md-6">
           <div class="card shadow-sm bg-dark text-white">
             <img
               class="bd-placeholder-img card-img-top"
               src="./images/VBS2023storytime.jpg"
-              alt="storytime in a setting with blankets and colorful wall hangings"
-            />
+              alt="storytime in a setting with blankets and colorful wall hangings" />
             <div class="card-body">
               <p class="card-text">Storytime</p>
             </div>
           </div>
         </div>
+        <!-- Image 2 -->
         <div class="col-12 col-md-6 pt-3 pt-md-0">
           <div class="card shadow-sm bg-dark text-white">
             <img
               class="bd-placeholder-img card-img-top"
               src="./images/VBS2023crafts.jpg"
-              alt="crafts - child connects stars to make a constellation"
-            />
+              alt="crafts - child connects stars to make a constellation" />
             <div class="card-body">
               <p class="card-text">Crafts</p>
             </div>
           </div>
         </div>
       </div>
+      <!-- VBS Images Group 2 -->
       <div class="row pt-3 mx-auto text-center">
+        <!-- Image 3 -->
         <div class="col-12 col-md-6">
           <div class="card shadow-sm bg-dark text-white">
             <img
               class="bd-placeholder-img card-img-top"
               src="./images/VBS2023imagination_station.jpg"
-              alt="a teen guides six children through an experiment"
-            />
+              alt="a teen guides six children through an experiment" />
             <div class="card-body">
               <p class="card-text">Imagination Station (Science)</p>
             </div>
           </div>
         </div>
+        <!-- Image 4 -->
         <div class="col-12 col-md-6 pt-3 pt-md-0">
           <div class="card shadow-sm bg-dark text-white">
             <img
               class="bd-placeholder-img card-img-top"
               src="./images/VBS2023dance2.jpg"
-              alt="children dancing"
-            />
+              alt="children dancing" />
             <div class="card-body">
               <p class="card-text">Singing and Dancing</p>
             </div>
           </div>
         </div>
       </div>
+      <!-- VBS Images Group 3 -->
       <div class="row pt-3 mx-auto text-center">
+        <!-- Image 5 -->
         <div class="col-12 col-md-6">
           <div class="card shadow-sm bg-dark text-white">
             <img
               class="bd-placeholder-img card-img-top"
               src="./images/VBS2023outdoor_play1.jpg"
-              alt="a boy and girl play tug-of-war with a pool noodle"
-            />
+              alt="a boy and girl play tug-of-war with a pool noodle" />
             <div class="card-body">
               <p class="card-text">Outdoor Games</p>
             </div>
           </div>
         </div>
+        <!-- Image 6 -->
         <div class="col-12 col-md-6 pt-3 pt-md-0">
           <div class="card shadow-sm bg-dark text-white">
             <img
               class="bd-placeholder-img card-img-top"
               src="./images/VBS2023outdoor_play2.jpg"
-              alt="children play on the church lawn"
-            />
+              alt="children play on the church lawn" />
             <div class="card-body">
               <p class="card-text">More Outdoor Games</p>
             </div>
           </div>
         </div>
       </div>
-
+      <!-- VBS Images Group 4 -->
       <div class="row pt-3 mx-auto text-center">
         <div class="col-12 col-md-6">
           <div class="card shadow-sm bg-dark text-white">
             <img
               class="bd-placeholder-img card-img-top"
               src="./images/VBS2023snacks.jpg"
-              alt="two girls enjoy ice cream sandwiches"
-            />
+              alt="two girls enjoy ice cream sandwiches" />
             <div class="card-body">
               <p class="card-text">Snacks</p>
             </div>
@@ -341,44 +310,40 @@
             <img
               class="bd-placeholder-img card-img-top"
               src="./images/VBS2023fun.jpg"
-              alt="teen helpers dressed as astronauts"
-            />
+              alt="teen helpers dressed as astronauts" />
             <div class="card-body">
               <p class="card-text">VBS!!!</p>
             </div>
           </div>
         </div>
       </div>
+      <!-- Secondary Header -->
       <div class="row pt-3 mx-auto text-center">
-        <strong>Vacation Bible School Director:</strong>
+        <div class="col">
+          <strong>Vacation Bible School Director:</strong>
+        </div>
       </div>
+      <!-- VBS Director Info -->
       <div class="row pt-3 mx-auto text-center">
-        <p>
-          Courtney<br />
-          <a href="mailto:childrensministries@vmumc.com"
-            >childrensministries@vmumc.com</a
-          >
-        </p>
+        <div class="col">
+          <p>
+            Courtney<br />
+            <a href="mailto:childrensministries@vmumc.com">childrensministries@vmumc.com</a>
+          </p>
+        </div>
       </div>
     </div>
     <!-- Footer Section -->
     <footer class="mb-sm-3 container mx-auto p-0">
       <div class="row mx-auto bg-dark shadow text-white rounded-sm-bottom">
         <!-- UMC Logo -->
-        <div
-          class="col-lg-1 col-md-2 col-sm-12 mt-2 mb-2 align-self-center text-center"
-        >
-          <a href="#"
-            ><img height="60" width="60" src="./images/white+umc+logo.png"
-          /></a>
+        <div class="col-lg-1 col-md-2 col-sm-12 mt-2 mb-2 align-self-center text-center">
+          <a href="#"><img height="60" width="60" src="./images/white+umc+logo.png" /></a>
         </div>
         <!-- Copyright Info -->
-        <div
-          class="col-lg-8 col-md-10 col-sm-12 mt-2 align-self-center text-center text-md-start"
-        >
+        <div class="col-lg-8 col-md-10 col-sm-12 mt-2 align-self-center text-center text-md-start">
           <p>
-            &copy; <span id="year"></span> - Van Meter United Methodist Church.
-            All rights reserved.
+            &copy; <span id="year"></span> - Van Meter United Methodist Church. All rights reserved.
           </p>
         </div>
         <!-- Social Media Text -->
@@ -386,9 +351,7 @@
           <p>Stay Connected</p>
         </div>
         <!-- Social Media Image -->
-        <div
-          class="col-lg-1 mt-2 ps-lg-0 mb-3 text-center text-lg-start align-self-center"
-        >
+        <div class="col-lg-1 mt-2 ps-lg-0 mb-3 text-center text-lg-start align-self-center">
           <a href="https://www.facebook.com/profile.php?id=100064317144537"
             ><img height="35" width="35" src="./images/facebook.png"
           /></a>
