--- a/alternativechristmasgiving.html
+++ b/alternativechristmasgiving.html
@@ -226,70 +226,103 @@
     </div>
     <!-- Main content section -->
     <div class="container mx-auto px-3 bg pb-5">
+      <!-- Header -->
       <div class="row pt-5 mx-auto text-center">
-        <h1>Helping Others</h1>
+        <div class="col">
+          <h1>Helping Others</h1>
+        </div>
       </div>
+      <!-- Divider -->
       <div class="row pt-3 mx-auto text-center">
-        <hr />
+        <div class="col">
+          <hr />
+        </div>
       </div>
+      <!-- Paragraph 1 -->
       <div class="row pt-3 mx-auto">
-        <p>
-          With our economy in a difficult time, Christmas shopping may not be as
-          happy a time as usual. The best gifts are those that make you feel
-          warm inside, either giving or receiving.
-        </p>
+        <div class="col">
+          <p>
+            With our economy in a difficult time, Christmas shopping may not be
+            as happy a time as usual. The best gifts are those that make you
+            feel warm inside, either giving or receiving.
+          </p>
+        </div>
       </div>
+      <!-- Paragraph 2 -->
       <div class="row pt-3 px-5 mx-auto">
-        <p>
-          ALTERNATIVE CHRISTMAS says that having more "stuff" is not as
-          important as making the world a better place. Are you looking for that
-          special gift -- a gift that gives twice?
-        </p>
-        <p>
-          An ALTERNATIVE CHRISTMAS mission project is an easy, convenient and
-          thoughtful way to "buy" a gift for anyone.
-        </p>
+        <div class="col">
+          <p>
+            ALTERNATIVE CHRISTMAS says that having more "stuff" is not as
+            important as making the world a better place. Are you looking for
+            that special gift -- a gift that gives twice?
+          </p>
+          <p>
+            An ALTERNATIVE CHRISTMAS mission project is an easy, convenient and
+            thoughtful way to "buy" a gift for anyone.
+          </p>
+        </div>
       </div>
+      <!-- Paragraph 3 -->
       <div class="row pt-3 mx-auto">
-        <p>Alternative Giving is appropriate for:</p>
+        <div class="col">
+          <p>Alternative Giving is appropriate for:</p>
+        </div>
       </div>
+      <!-- Paragraph 3 List -->
       <div class="row ps-3 mx-auto">
-        <ul>
-          <li>Teachers and Co-Workers</li>
-          <li>Grandparents or other family members</li>
-          <li>The person who "has everything"</li>
-          <li>The "hard to buy for" person</li>
-          <li>Everyone else on your gift list</li>
-        </ul>
+        <div class="col">
+          <ul>
+            <li>Teachers and Co-Workers</li>
+            <li>Grandparents or other family members</li>
+            <li>The person who "has everything"</li>
+            <li>The "hard to buy for" person</li>
+            <li>Everyone else on your gift list</li>
+          </ul>
+        </div>
       </div>
+      <!-- Secondary Header -->
       <div class="row pt-3 mx-auto text-center">
-        <h4>Alternative Christmas Giving Suggestions</h4>
+        <div class="col">
+          <h4>Alternative Christmas Giving Suggestions</h4>
+        </div>
       </div>
+      <!-- Link 1 -->
       <div class="row pt-3 mx-auto text-center">
-        <strong>
-          <a href="http://www.bidwellriverside.org/"
-            >Families Forward (formerly Bidwell-Riverside)</a
+        <div class="col">
+          <strong>
+            <a href="http://www.bidwellriverside.org/"
+              >Families Forward (formerly Bidwell-Riverside)</a
+            >
+          </strong>
+        </div>
+      </div>
+      <!-- Link 2 -->
+      <div class="row pt-3 mx-auto text-center">
+        <div class="col">
+          <strong>
+            <a href="http://www.selfhelpinternational.org/"
+              >Self Help International</a
+            >
+          </strong>
+        </div>
+      </div>
+      <!-- Link 3 -->
+      <div class="row pt-3 mx-auto text-center">
+        <div class="col">
+          <strong
+            ><a href="http://www.heifer.org/#">Heifer International</a></strong
           >
-        </strong>
+        </div>
       </div>
+      <!-- Link 4 -->
       <div class="row pt-3 mx-auto text-center">
-        <strong>
-          <a href="http://www.selfhelpinternational.org/"
-            >Self Help International</a
-          >
-        </strong>
-      </div>
-      <div class="row pt-3 mx-auto text-center">
-        <strong
-          ><a href="http://www.heifer.org/#">Heifer International</a></strong
-        >
-      </div>
-      <div class="row pt-3 mx-auto text-center">
-        <strong>
-          <a href="http://www.nothingbutnets.net"
-            >United to Beat Malaria (formerly Nothing But Nets)</a
-          >
-        </strong>
+        <div class="col">
+          <strong>
+            <a href="http://www.nothingbutnets.net"
+              >United to Beat Malaria (formerly Nothing But Nets)</a
+            >
+          </strong>
+        </div>
       </div>
     </div>
     <!-- Footer Section -->
