--- a/beliefs.html
+++ b/beliefs.html
@@ -222,9 +222,13 @@
     </div>
     <!-- Main content section -->
     <div class="px-3 mx-auto container bg pb-5">
+      <!-- Header -->
       <div class="row pt-5 mx-auto text-center">
-        <h1>The Journey with God</h1>
+        <div class="col">
+          <h1>The Journey with God</h1>
+        </div>
       </div>
+      <!-- Paragraph 1 -->
       <div class="row text-center pt-3 mx-auto">
         <div class="col">
           <p>
@@ -235,6 +239,7 @@
           </p>
         </div>
       </div>
+      <!-- Link 1 -->
       <div class="row text-center pt-3 mx-auto">
         <a
           class="btn btn-outline-secondary my-3"
@@ -243,6 +248,7 @@
           For a deeper discussion of our faith
         </a>
       </div>
+      <!-- Image 1 -->
       <div class="row text-center pt-3 mx-auto">
         <div class="col">
           <img
