--- a/staff.html
+++ b/staff.html
@@ -2,32 +2,16 @@
 <html lang="en">
   <head>
     <!-- Preloading images for faster loading -->
-    <link
-      rel="preload"
-      href="./images/websitebanner.webp"
-      as="image"
-      fetchpriority="high"
-    />
-    <link
-      rel="preload"
-      href="./images/websitebanner.jpg"
-      as="image"
-      fetchpriority="high"
-    />
+    <link rel="preload" href="./images/websitebanner.webp" as="image" fetchpriority="high" />
+    <link rel="preload" href="./images/websitebanner.jpg" as="image" fetchpriority="high" />
     <!-- Setting metadata -->
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>
-      Van Meter UMC Church Staff - Van Meter United Methodist Church
-    </title>
-    <meta
-      name="keywords"
-      content="Van Meter United Methodist Church, Van Meter, VMUMC"
-    />
+    <title>Van Meter UMC Church Staff - Van Meter United Methodist Church</title>
+    <meta name="keywords" content="Van Meter United Methodist Church, Van Meter, VMUMC" />
     <meta
       name="description"
-      content="The Van Meter United Methodist Church site provides users with dates, times and details for the worship and fellowship of the congregation."
-    />
+      content="The Van Meter United Methodist Church site provides users with dates, times and details for the worship and fellowship of the congregation." />
     <!-- Setting icon -->
     <link rel="icon" href="./images/umc-logo.png" />
 
@@ -39,12 +23,10 @@
     <!-- Linking required CSS files -->
     <link
       rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
-    />
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" />
     <link
       rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/@tarekraafat/autocomplete.js@10.2.7/dist/css/autoComplete.01.min.css"
-    />
+      href="https://cdn.jsdelivr.net/npm/@tarekraafat/autocomplete.js@10.2.7/dist/css/autoComplete.01.min.css" />
     <link rel="stylesheet" href="./index.css" />
   </head>
   <body>
@@ -62,15 +44,11 @@
 
     <!-- Navbar section -->
     <div id="navbar-container" class="container mx-auto p-0">
-      <nav
-        class="navbar navbar-expand-lg navbar-dark bg-dark"
-        aria-label="Fifth navbar example"
-      >
+      <nav class="navbar navbar-expand-lg navbar-dark bg-dark" aria-label="Fifth navbar example">
         <div class="container-fluid">
           <!-- Brand -->
           <a class="navbar-brand" href="#"
-            ><img height="24" width="24" src="./images/white+umc+logo.png" />
-            VMUMC</a
+            ><img height="24" width="24" src="./images/white+umc+logo.png" /> VMUMC</a
           >
           <button
             class="navbar-toggler"
@@ -79,8 +57,7 @@
             data-bs-target="#navbarsExample05"
             aria-controls="navbarsExample05"
             aria-expanded="false"
-            aria-label="Toggle navigation"
-          >
+            aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
 
@@ -106,39 +83,27 @@
                 <ul class="dropdown-menu dropdown-menu-dark bg-dark shadow">
                   <!-- Dropdown item -->
                   <li>
-                    <a class="dropdown-item" href="/directions.html">
-                      Church Directions
-                    </a>
+                    <a class="dropdown-item" href="/directions.html"> Church Directions </a>
                   </li>
                   <!-- Dropdown item -->
                   <li>
-                    <a class="dropdown-item" href="/community.html">
-                      Church Community
-                    </a>
+                    <a class="dropdown-item" href="/community.html"> Church Community </a>
                   </li>
                   <!-- Dropdown item -->
                   <li>
-                    <a class="dropdown-item" href="/services.html">
-                      Church Services
-                    </a>
+                    <a class="dropdown-item" href="/services.html"> Church Services </a>
                   </li>
                   <!-- Dropdown item -->
                   <li>
-                    <a class="dropdown-item" href="/education.html">
-                      Christian Education
-                    </a>
+                    <a class="dropdown-item" href="/education.html"> Christian Education </a>
                   </li>
                   <!-- Dropdown item -->
                   <li>
-                    <a class="dropdown-item" href="/staff.html">
-                      Church Staff
-                    </a>
+                    <a class="dropdown-item" href="/staff.html"> Church Staff </a>
                   </li>
                   <!-- Dropdown item -->
                   <li>
-                    <a class="dropdown-item" href="/beliefs.html">
-                      Church Beliefs
-                    </a>
+                    <a class="dropdown-item" href="/beliefs.html"> Church Beliefs </a>
                   </li>
                 </ul>
               </li>
@@ -174,15 +139,11 @@
                 <ul class="dropdown-menu dropdown-menu-dark bg-dark">
                   <!-- Dropdown item -->
                   <li>
-                    <a class="dropdown-item" href="/contact.html">
-                      Contact Info
-                    </a>
+                    <a class="dropdown-item" href="/contact.html"> Contact Info </a>
                   </li>
                   <!-- Dropdown item -->
                   <li>
-                    <a class="dropdown-item" href="/prayer-request.html">
-                      Prayer Request
-                    </a>
+                    <a class="dropdown-item" href="/prayer-request.html"> Prayer Request </a>
                   </li>
                   <!-- Dropdown item -->
                   <li>
@@ -215,8 +176,7 @@
                 autocorrect="off"
                 autocomplete="off"
                 autocapitalize="off"
-                placeholder="Search"
-              />
+                placeholder="Search" />
             </div>
           </div>
         </div>
@@ -224,34 +184,31 @@
     </div>
     <!-- Main content section -->
     <div class="px-3 mx-auto container bg pb-5">
+      <!-- Header -->
       <div class="row pt-5 text-center">
-        <h1>Church Staff</h1>
+        <div class="col">
+          <h1>Church Staff</h1>
+        </div>
       </div>
-      <!-- Start Staff Card -->
+      <!-- Beth Staff Card -->
       <div class="row d-flex justify-content-center align-items-center pt-3">
         <div class="col-lg-12">
           <div class="card" style="border-radius: 15px">
             <div class="card-body p-4">
-              <div
-                class="d-flex flex-column flex-lg-row text-center text-lg-start"
-              >
+              <div class="d-flex flex-column flex-lg-row text-center text-lg-start">
                 <div class="flex-shrink-0 mb-3 mb-lg-0">
                   <img
                     src="./images/PastorBeth2.jpg"
                     alt="Rev. Beth Harbaugh"
-                    class="img-fluid profile-img"
-                  />
+                    class="img-fluid profile-img" />
                 </div>
                 <div class="flex-grow-1 ms-lg-3 overflow-auto">
                   <h5 class="mb-1">Rev. Beth Harbaugh</h5>
                   <br />
                   <p class="mb-0" style="color: #2b2a2a">
-                    Rev. Beth leads the congregation in weekly worship and
-                    provides pastoral care and administration.<br /><br />Contact
-                    her at 319-540-1644 or
-                    <a href="mailto:bethmaryharbaugh@gmail.com"
-                      >bethmaryharbaugh@gmail.com</a
-                    >
+                    Rev. Beth leads the congregation in weekly worship and provides pastoral care
+                    and administration.<br /><br />Contact her at 319-540-1644 or
+                    <a href="mailto:bethmaryharbaugh@gmail.com">bethmaryharbaugh@gmail.com</a>
                   </p>
                 </div>
               </div>
@@ -259,21 +216,17 @@
           </div>
         </div>
       </div>
-      <!-- End Staff Card -->
-      <!-- Start Staff Card -->
+      <!-- Courtney Staff Card -->
       <div class="row d-flex justify-content-center align-items-center pt-3">
         <div class="col-lg-12">
           <div class="card" style="border-radius: 15px">
             <div class="card-body p-4">
-              <div
-                class="d-flex flex-column flex-lg-row text-center text-lg-start"
-              >
+              <div class="d-flex flex-column flex-lg-row text-center text-lg-start">
                 <div class="flex-shrink-0 mb-3 mb-lg-0">
                   <img
                     src="./images/JAM_logo.png"
                     alt="JAM = Jesus and Me (logo)"
-                    class="img-fluid profile-img"
-                  />
+                    class="img-fluid profile-img" />
                 </div>
                 <div class="flex-grow-1 ms-lg-3 overflow-auto">
                   <h5 class="mb-1">Miss Courtney</h5>
@@ -287,49 +240,39 @@
           </div>
         </div>
       </div>
-      <!-- End Staff Card -->
-      <!-- Start Staff Card -->
+      <!-- Jess Staff Card -->
       <div class="row d-flex justify-content-center align-items-center pt-3">
         <div class="col-lg-12">
           <div class="card" style="border-radius: 15px">
             <div class="card-body p-4">
-              <div
-                class="d-flex flex-column flex-lg-row text-center text-lg-start"
-              >
+              <div class="d-flex flex-column flex-lg-row text-center text-lg-start">
                 <div class="flex-shrink-0 mb-3 mb-lg-0">
                   <img
                     src="./images/JessJaspers.jpg"
                     alt="Kids Care director"
-                    class="img-fluid profile-img"
-                  />
+                    class="img-fluid profile-img" />
                 </div>
                 <div class="flex-grow-1 ms-lg-3 overflow-auto">
                   <h5 class="mb-1">Jess Jaspers</h5>
                   <br />
-                  <p class="mb-0" style="color: #2b2a2a">
-                    Jess is the Kids Care Director.
-                  </p>
+                  <p class="mb-0" style="color: #2b2a2a">Jess is the Kids Care Director.</p>
                 </div>
               </div>
             </div>
           </div>
         </div>
       </div>
-      <!-- End Staff Card -->
-      <!-- Start Staff Card -->
+      <!-- Shirlee Staff Card -->
       <div class="row d-flex justify-content-center align-items-center pt-3">
         <div class="col-lg-12">
           <div class="card" style="border-radius: 15px">
             <div class="card-body p-4">
-              <div
-                class="d-flex flex-column flex-lg-row text-center text-lg-start"
-              >
+              <div class="d-flex flex-column flex-lg-row text-center text-lg-start">
                 <div class="flex-shrink-0 mb-3 mb-lg-0">
                   <img
                     src="./images/Shirlee.jpg"
                     alt="Administrative Assistant"
-                    class="img-fluid profile-img"
-                  />
+                    class="img-fluid profile-img" />
                 </div>
                 <div class="flex-grow-1 ms-lg-3 overflow-auto">
                   <h5 class="mb-1">Shirlee Cagle</h5>
@@ -343,21 +286,17 @@
           </div>
         </div>
       </div>
-      <!-- End Staff Card -->
-      <!-- Start Staff Card -->
+      <!-- Mike Staff Card -->
       <div class="row d-flex justify-content-center align-items-center pt-3">
         <div class="col-lg-12">
           <div class="card" style="border-radius: 15px">
             <div class="card-body p-4">
-              <div
-                class="d-flex flex-column flex-lg-row text-center text-lg-start"
-              >
+              <div class="d-flex flex-column flex-lg-row text-center text-lg-start">
                 <div class="flex-shrink-0 mb-3 mb-lg-0">
                   <img
                     src="./images/MikeCooper.jpg"
                     alt="Organist and Choir Director"
-                    class="img-fluid profile-img"
-                  />
+                    class="img-fluid profile-img" />
                 </div>
                 <div class="flex-grow-1 ms-lg-3 overflow-auto">
                   <h5 class="mb-1">Mike Cooper</h5>
@@ -371,56 +310,42 @@
           </div>
         </div>
       </div>
-      <!-- End Staff Card -->
-      <!-- Start Staff Card -->
+      <!-- Melody Staff Card -->
       <div class="row d-flex justify-content-center align-items-center pt-3">
         <div class="col-lg-12">
           <div class="card" style="border-radius: 15px">
             <div class="card-body p-4">
-              <div
-                class="d-flex flex-column flex-lg-row text-center text-lg-start"
-              >
+              <div class="d-flex flex-column flex-lg-row text-center text-lg-start">
                 <div class="flex-shrink-0 mb-3 mb-lg-0">
-                  <img
-                    src="./images/MelLaake.jpg"
-                    alt="Pianist"
-                    class="img-fluid profile-img"
-                  />
+                  <img src="./images/MelLaake.jpg" alt="Pianist" class="img-fluid profile-img" />
                 </div>
                 <div class="flex-grow-1 ms-lg-3 overflow-auto">
                   <h5 class="mb-1">Melody Laake</h5>
                   <br />
-                  <p class="mb-0" style="color: #2b2a2a">
-                    Melody is our Pianist.
-                  </p>
+                  <p class="mb-0" style="color: #2b2a2a">Melody is our Pianist.</p>
                 </div>
               </div>
             </div>
           </div>
         </div>
       </div>
-      <!-- End Staff Card -->
-      <!-- Start Staff Card -->
+      <!-- Hoppes Staff Card -->
       <div class="row d-flex justify-content-center align-items-center pt-3">
         <div class="col-lg-12">
           <div class="card" style="border-radius: 15px">
             <div class="card-body p-4">
-              <div
-                class="d-flex flex-column flex-lg-row text-center text-lg-start"
-              >
+              <div class="d-flex flex-column flex-lg-row text-center text-lg-start">
                 <div class="flex-shrink-0 mb-3 mb-lg-0">
                   <img
                     src="./images/cleaning.jpg"
                     alt="cleaning supplies"
-                    class="img-fluid profile-img"
-                  />
+                    class="img-fluid profile-img" />
                 </div>
                 <div class="flex-grow-1 ms-lg-3 overflow-auto">
                   <h5 class="mb-1">Hoppes family</h5>
                   <br />
                   <p class="mb-0" style="color: #2b2a2a">
-                    The Hoppes family handles the janitorial duties for our
-                    church.
+                    The Hoppes family handles the janitorial duties for our church.
                   </p>
                 </div>
               </div>
@@ -428,27 +353,19 @@
           </div>
         </div>
       </div>
-      <!-- End Staff Card -->
     </div>
 
     <!-- Footer Section -->
     <footer class="mb-sm-3 container mx-auto p-0">
       <div class="row mx-auto bg-dark shadow text-white rounded-sm-bottom">
         <!-- UMC Logo -->
-        <div
-          class="col-lg-1 col-md-2 col-sm-12 mt-2 mb-2 align-self-center text-center"
-        >
-          <a href="#"
-            ><img height="60" width="60" src="./images/white+umc+logo.png"
-          /></a>
+        <div class="col-lg-1 col-md-2 col-sm-12 mt-2 mb-2 align-self-center text-center">
+          <a href="#"><img height="60" width="60" src="./images/white+umc+logo.png" /></a>
         </div>
         <!-- Copyright Info -->
-        <div
-          class="col-lg-8 col-md-10 col-sm-12 mt-2 align-self-center text-center text-md-start"
-        >
+        <div class="col-lg-8 col-md-10 col-sm-12 mt-2 align-self-center text-center text-md-start">
           <p>
-            &copy; <span id="year"></span> - Van Meter United Methodist Church.
-            All rights reserved.
+            &copy; <span id="year"></span> - Van Meter United Methodist Church. All rights reserved.
           </p>
         </div>
         <!-- Social Media Text -->
@@ -456,9 +373,7 @@
           <p>Stay Connected</p>
         </div>
         <!-- Social Media Image -->
-        <div
-          class="col-lg-1 mt-2 ps-lg-0 mb-3 text-center text-lg-start align-self-center"
-        >
+        <div class="col-lg-1 mt-2 ps-lg-0 mb-3 text-center text-lg-start align-self-center">
           <a href="https://www.facebook.com/profile.php?id=100064317144537"
             ><img height="35" width="35" src="./images/facebook.png"
           /></a>
