--- a/worship.html
+++ b/worship.html
@@ -2,30 +2,16 @@
 <html lang="en">
   <head>
     <!-- Preloading images for faster loading -->
-    <link
-      rel="preload"
-      href="./images/websitebanner.webp"
-      as="image"
-      fetchpriority="high"
-    />
-    <link
-      rel="preload"
-      href="./images/websitebanner.jpg"
-      as="image"
-      fetchpriority="high"
-    />
+    <link rel="preload" href="./images/websitebanner.webp" as="image" fetchpriority="high" />
+    <link rel="preload" href="./images/websitebanner.jpg" as="image" fetchpriority="high" />
     <!-- Setting metadata -->
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Worship - Van Meter United Methodist Church</title>
-    <meta
-      name="keywords"
-      content="Van Meter United Methodist Church, Van Meter, VMUMC"
-    />
+    <meta name="keywords" content="Van Meter United Methodist Church, Van Meter, VMUMC" />
     <meta
       name="description"
-      content="The Van Meter United Methodist Church site provides users with dates, times and details for the worship and fellowship of the congregation."
-    />
+      content="The Van Meter United Methodist Church site provides users with dates, times and details for the worship and fellowship of the congregation." />
     <!-- Setting icon -->
     <link rel="icon" href="./images/umc-logo.png" />
 
@@ -37,12 +23,10 @@
     <!-- Linking required CSS files -->
     <link
       rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
-    />
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" />
     <link
       rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/@tarekraafat/autocomplete.js@10.2.7/dist/css/autoComplete.01.min.css"
-    />
+      href="https://cdn.jsdelivr.net/npm/@tarekraafat/autocomplete.js@10.2.7/dist/css/autoComplete.01.min.css" />
     <link rel="stylesheet" href="./index.css" />
   </head>
   <body>
@@ -60,15 +44,11 @@
 
     <!-- Navbar section -->
     <div id="navbar-container" class="container mx-auto p-0">
-      <nav
-        class="navbar navbar-expand-lg navbar-dark bg-dark"
-        aria-label="Fifth navbar example"
-      >
+      <nav class="navbar navbar-expand-lg navbar-dark bg-dark" aria-label="Fifth navbar example">
         <div class="container-fluid">
           <!-- Brand -->
           <a class="navbar-brand" href="#"
-            ><img height="24" width="24" src="./images/white+umc+logo.png" />
-            VMUMC</a
+            ><img height="24" width="24" src="./images/white+umc+logo.png" /> VMUMC</a
           >
           <button
             class="navbar-toggler"
@@ -77,8 +57,7 @@
             data-bs-target="#navbarsExample05"
             aria-controls="navbarsExample05"
             aria-expanded="false"
-            aria-label="Toggle navigation"
-          >
+            aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
 
@@ -104,39 +83,27 @@
                 <ul class="dropdown-menu dropdown-menu-dark bg-dark shadow">
                   <!-- Dropdown item -->
                   <li>
-                    <a class="dropdown-item" href="/directions.html">
-                      Church Directions
-                    </a>
+                    <a class="dropdown-item" href="/directions.html"> Church Directions </a>
                   </li>
                   <!-- Dropdown item -->
                   <li>
-                    <a class="dropdown-item" href="/community.html">
-                      Church Community
-                    </a>
+                    <a class="dropdown-item" href="/community.html"> Church Community </a>
                   </li>
                   <!-- Dropdown item -->
                   <li>
-                    <a class="dropdown-item" href="/services.html">
-                      Church Services
-                    </a>
+                    <a class="dropdown-item" href="/services.html"> Church Services </a>
                   </li>
                   <!-- Dropdown item -->
                   <li>
-                    <a class="dropdown-item" href="/education.html">
-                      Christian Education
-                    </a>
+                    <a class="dropdown-item" href="/education.html"> Christian Education </a>
                   </li>
                   <!-- Dropdown item -->
                   <li>
-                    <a class="dropdown-item" href="/staff.html">
-                      Church Staff
-                    </a>
+                    <a class="dropdown-item" href="/staff.html"> Church Staff </a>
                   </li>
                   <!-- Dropdown item -->
                   <li>
-                    <a class="dropdown-item" href="/beliefs.html">
-                      Church Beliefs
-                    </a>
+                    <a class="dropdown-item" href="/beliefs.html"> Church Beliefs </a>
                   </li>
                 </ul>
               </li>
@@ -172,15 +139,11 @@
                 <ul class="dropdown-menu dropdown-menu-dark bg-dark">
                   <!-- Dropdown item -->
                   <li>
-                    <a class="dropdown-item" href="/contact.html">
-                      Contact Info
-                    </a>
+                    <a class="dropdown-item" href="/contact.html"> Contact Info </a>
                   </li>
                   <!-- Dropdown item -->
                   <li>
-                    <a class="dropdown-item" href="/prayer-request.html">
-                      Prayer Request
-                    </a>
+                    <a class="dropdown-item" href="/prayer-request.html"> Prayer Request </a>
                   </li>
                   <!-- Dropdown item -->
                   <li>
@@ -213,8 +176,7 @@
                 autocorrect="off"
                 autocomplete="off"
                 autocapitalize="off"
-                placeholder="Search"
-              />
+                placeholder="Search" />
             </div>
           </div>
         </div>
@@ -222,111 +184,139 @@
     </div>
     <!-- Main content section -->
     <div class="px-3 mx-auto container bg pb-5">
+      <!-- Header -->
       <div class="row pt-5 mx-auto text-center">
-        <h1>Weekly Worship</h1>
+        <div class="col">
+          <h1>Weekly Worship</h1>
+        </div>
       </div>
-
-      <div class="row mt-4 mx-auto">
-        <hr />
+      <!-- Divider -->
+      <div class="row mx-auto pt-3">
+        <div class="col">
+          <hr />
+        </div>
+      </div>
+      <!-- Worship Section -->
+      <div class="row pt-3 mx-auto">
+        <!-- Secondary Header -->
         <div class="row mx-auto">
           <div class="col-lg-5">
             <h2>Worship Matters</h2>
           </div>
         </div>
+        <!-- JAM Section -->
         <div class="row mx-auto">
+          <!-- Paragraph 1 -->
           <div class="col-lg-5 align-self-center">
             <p>
-              J.A.M. is our Wednesday evening programming and is held through
-              the school year. Dinner is served at 6:00 and the program goes
-              from 6:30-7:30.
+              J.A.M. is our Wednesday evening programming and is held through the school year.
+              Dinner is served at 6:00 and the program goes from 6:30-7:30.
             </p>
           </div>
+          <!-- Image 1 -->
           <div class="col-lg-3 align-self-center text-center text-lg-start">
             <p>
               <a href="/JAM.html">
                 <img
                   src="./images/JAM_logo.png"
                   class="w-50 rounded"
-                  alt="JAM Jesus and Me (white cross atop paint splatter)"
-                />
+                  alt="JAM Jesus and Me (white cross atop paint splatter)" />
               </a>
             </p>
           </div>
         </div>
+        <!-- Adult Discussion Group Section -->
         <div class="row mx-auto">
+          <!-- Adult Discussion Paragraphs -->
           <div class="col-lg-5">
+            <!-- Paragraph 2 -->
             <div class="row">
               <div class="col-lg-12">
                 <p>
-                  The Adult Discussion Group meets at 9:30AM in the overflow
-                  area at the back of the sanctuary. Come to church early for an
-                  interesting discussion and thoughtful study. Topics vary; a
-                  given topic may be discussed for several weeks.
+                  The Adult Discussion Group meets at 9:30AM in the overflow area at the back of the
+                  sanctuary. Come to church early for an interesting discussion and thoughtful
+                  study. Topics vary; a given topic may be discussed for several weeks.
                 </p>
               </div>
             </div>
+            <!-- Paragraph 3 -->
             <div class="row">
               <div class="col-lg-12">
                 <p>
-                  Worship services are Sundays at 10:45 AM. There is a
-                  fellowship time after the service. A staffed nursery is
-                  available.
+                  Worship services are Sundays at 10:45 AM. There is a fellowship time after the
+                  service. A staffed nursery is available.
                 </p>
               </div>
             </div>
           </div>
+          <!-- Image 2 -->
           <div class="col-lg-3 align-self-center text-center text-lg-start">
             <img
               src="./images/worship2.jpg"
               class="w-50 rounded"
-              alt="drawing of stained glass window featuring creche, star, shepherd, Mary, and bright piecemeal background"
-            />
+              alt="drawing of stained glass window featuring creche, star, shepherd, Mary, and bright piecemeal background" />
           </div>
         </div>
+        <!-- Paragraph 4 -->
         <div class="row mx-auto">
-          <p>
-            <strong>We impatiently await that which is already here.</strong>
-          </p>
+          <div class="col">
+            <p>
+              <strong>We impatiently await that which is already here.</strong>
+            </p>
+          </div>
         </div>
+        <!-- Pastors Message Link Image -->
         <div class="row text-center">
           <a href="/pastorsmessage.html"
-            ><img
-              class="rounded"
-              src="images/pastormessage.jpg"
-              alt="Pastor's Message"
+            ><img class="rounded" src="images/pastormessage.jpg" alt="Pastor's Message"
           /></a>
         </div>
+        <!-- Table -->
         <div class="row mx-auto pt-4">
           <div class="table-responsive">
             <table class="table table-bordered text-center align-middle">
+              <!-- Table Head -->
               <thead>
+                <!-- Table Row -->
                 <tr>
+                  <!-- Table Column -->
                   <th scope="col">Scriptures and Sermons</th>
+                  <!-- Table Column -->
                   <th scope="col">Special Celebrations</th>
                 </tr>
               </thead>
+              <!-- Table Body -->
               <tbody>
+                <!-- Table Row -->
                 <tr>
+                  <!-- Table Column -->
                   <td>
-                    January 7<br /><br />Sermon:<br />"Humans Becoming the Body
-                    of Christ" <br /><br />Scripture:<br />Mark 1:9-15; Acts
-                    19:1-7
+                    January 7<br /><br />Sermon:<br />"Humans Becoming the Body of Christ"
+                    <br /><br />Scripture:<br />Mark 1:9-15; Acts 19:1-7
                   </td>
+                  <!-- Table Column -->
                   <td>Holy Communion Epiphany Sunday</td>
                 </tr>
+                <!-- Table Row -->
                 <tr>
+                  <!-- Table Column -->
                   <td>January 14<br /><br />CANCELLED due to cold</td>
+                  <!-- Table Column -->
                   <td></td>
                 </tr>
+                <!-- Table Row -->
                 <tr>
+                  <!-- Table Column -->
                   <td>
-                    January 21<br /><br />Sermon:<br />"Your Servant Is
-                    Listening" <br /><br />Scripture:<br />Psalm 85:1-2, 8-13;
-                    Mark 1:1-8
+                    January 21<br /><br />Sermon:<br />"Your Servant Is Listening"
+                    <br /><br />Scripture:<br />Psalm 85:1-2, 8-13; Mark 1:1-8
                   </td>
+                  <!-- Table Column -->
                   <td>Human Relations Day</td>
                 </tr>
+                <!-- Table Row -->
                 <tr>
+                  <!-- Table Column -->
                   <td>
                     January 28<br /><br />
                     Sermon:<br />
@@ -334,6 +324,7 @@
                     Scripture:<br />
                     Psalm 111:1; I Corinthians 8:1-13
                   </td>
+                  <!-- Table Column -->
                   <td></td>
                 </tr>
               </tbody>
@@ -347,20 +338,13 @@
     <footer class="mb-sm-3 container mx-auto p-0">
       <div class="row mx-auto bg-dark shadow text-white rounded-sm-bottom">
         <!-- UMC Logo -->
-        <div
-          class="col-lg-1 col-md-2 col-sm-12 mt-2 mb-2 align-self-center text-center"
-        >
-          <a href="#"
-            ><img height="60" width="60" src="./images/white+umc+logo.png"
-          /></a>
+        <div class="col-lg-1 col-md-2 col-sm-12 mt-2 mb-2 align-self-center text-center">
+          <a href="#"><img height="60" width="60" src="./images/white+umc+logo.png" /></a>
         </div>
         <!-- Copyright Info -->
-        <div
-          class="col-lg-8 col-md-10 col-sm-12 mt-2 align-self-center text-center text-md-start"
-        >
+        <div class="col-lg-8 col-md-10 col-sm-12 mt-2 align-self-center text-center text-md-start">
           <p>
-            &copy; <span id="year"></span> - Van Meter United Methodist Church.
-            All rights reserved.
+            &copy; <span id="year"></span> - Van Meter United Methodist Church. All rights reserved.
           </p>
         </div>
         <!-- Social Media Text -->
@@ -368,9 +352,7 @@
           <p>Stay Connected</p>
         </div>
         <!-- Social Media Image -->
-        <div
-          class="col-lg-1 mt-2 ps-lg-0 mb-3 text-center text-lg-start align-self-center"
-        >
+        <div class="col-lg-1 mt-2 ps-lg-0 mb-3 text-center text-lg-start align-self-center">
           <a href="https://www.facebook.com/profile.php?id=100064317144537"
             ><img height="35" width="35" src="./images/facebook.png"
           /></a>
