--- a/ciayouth.html
+++ b/ciayouth.html
@@ -2,18 +2,8 @@
 <html lang="en">
   <head>
     <!-- Preloading images for faster loading -->
-    <link
-      rel="preload"
-      href="./images/websitebanner.webp"
-      as="image"
-      fetchpriority="high"
-    />
-    <link
-      rel="preload"
-      href="./images/websitebanner.jpg"
-      as="image"
-      fetchpriority="high"
-    />
+    <link rel="preload" href="./images/websitebanner.webp" as="image" fetchpriority="high" />
+    <link rel="preload" href="./images/websitebanner.jpg" as="image" fetchpriority="high" />
 
     <!-- Linking required Javascript files -->
     <script src="navbar.js" defer></script>
@@ -23,26 +13,20 @@
     <!-- Linking required CSS files -->
     <link
       rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
-    />
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" />
     <link
       rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/@tarekraafat/autocomplete.js@10.2.7/dist/css/autoComplete.01.min.css"
-    />
+      href="https://cdn.jsdelivr.net/npm/@tarekraafat/autocomplete.js@10.2.7/dist/css/autoComplete.01.min.css" />
     <link rel="stylesheet" href="./index.css" />
 
     <!-- Setting metadata -->
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Youth Group - Van Meter United Methodist Church</title>
-    <meta
-      name="keywords"
-      content="Van Meter United Methodist Church, Van Meter, VMUMC"
-    />
+    <meta name="keywords" content="Van Meter United Methodist Church, Van Meter, VMUMC" />
     <meta
       name="description"
-      content="The Van Meter United Methodist Church site provides users with dates, times and details for the worship and fellowship of the congregation."
-    />
+      content="The Van Meter United Methodist Church site provides users with dates, times and details for the worship and fellowship of the congregation." />
     <!-- Setting icon -->
     <link rel="icon" href="./images/umc-logo.png" />
   </head>
@@ -62,15 +46,11 @@
 
     <!-- Navbar section -->
     <div id="navbar-container" class="container mx-auto p-0">
-      <nav
-        class="navbar navbar-expand-lg navbar-dark bg-dark"
-        aria-label="Fifth navbar example"
-      >
+      <nav class="navbar navbar-expand-lg navbar-dark bg-dark" aria-label="Fifth navbar example">
         <div class="container-fluid">
           <!-- Brand -->
           <a class="navbar-brand" href="#"
-            ><img height="24" width="24" src="./images/white+umc+logo.png" />
-            VMUMC</a
+            ><img height="24" width="24" src="./images/white+umc+logo.png" /> VMUMC</a
           >
           <button
             class="navbar-toggler"
@@ -79,8 +59,7 @@
             data-bs-target="#navbarsExample05"
             aria-controls="navbarsExample05"
             aria-expanded="false"
-            aria-label="Toggle navigation"
-          >
+            aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
 
@@ -106,39 +85,27 @@
                 <ul class="dropdown-menu dropdown-menu-dark bg-dark shadow">
                   <!-- Dropdown item -->
                   <li>
-                    <a class="dropdown-item" href="/directions.html">
-                      Church Directions
-                    </a>
+                    <a class="dropdown-item" href="/directions.html"> Church Directions </a>
                   </li>
                   <!-- Dropdown item -->
                   <li>
-                    <a class="dropdown-item" href="/community.html">
-                      Church Community
-                    </a>
+                    <a class="dropdown-item" href="/community.html"> Church Community </a>
                   </li>
                   <!-- Dropdown item -->
                   <li>
-                    <a class="dropdown-item" href="/services.html">
-                      Church Services
-                    </a>
+                    <a class="dropdown-item" href="/services.html"> Church Services </a>
                   </li>
                   <!-- Dropdown item -->
                   <li>
-                    <a class="dropdown-item" href="/education.html">
-                      Christian Education
-                    </a>
+                    <a class="dropdown-item" href="/education.html"> Christian Education </a>
                   </li>
                   <!-- Dropdown item -->
                   <li>
-                    <a class="dropdown-item" href="/staff.html">
-                      Church Staff
-                    </a>
+                    <a class="dropdown-item" href="/staff.html"> Church Staff </a>
                   </li>
                   <!-- Dropdown item -->
                   <li>
-                    <a class="dropdown-item" href="/beliefs.html">
-                      Church Beliefs
-                    </a>
+                    <a class="dropdown-item" href="/beliefs.html"> Church Beliefs </a>
                   </li>
                 </ul>
               </li>
@@ -174,15 +141,11 @@
                 <ul class="dropdown-menu dropdown-menu-dark bg-dark">
                   <!-- Dropdown item -->
                   <li>
-                    <a class="dropdown-item" href="/contact.html">
-                      Contact Info
-                    </a>
+                    <a class="dropdown-item" href="/contact.html"> Contact Info </a>
                   </li>
                   <!-- Dropdown item -->
                   <li>
-                    <a class="dropdown-item" href="/prayer-request.html">
-                      Prayer Request
-                    </a>
+                    <a class="dropdown-item" href="/prayer-request.html"> Prayer Request </a>
                   </li>
                   <!-- Dropdown item -->
                   <li>
@@ -215,8 +178,7 @@
                 autocorrect="off"
                 autocomplete="off"
                 autocapitalize="off"
-                placeholder="Search"
-              />
+                placeholder="Search" />
             </div>
           </div>
         </div>
@@ -224,106 +186,131 @@
     </div>
     <!-- Main content section -->
     <div class="container mx-auto px-3 bg pb-5">
+      <!-- Header -->
       <div class="row pt-5 mx-auto text-center">
-        <h1>S.W.A.G: Van Meter UMC Youth Group</h1>
+        <div class="col">
+          <h1>S.W.A.G: Van Meter UMC Youth Group</h1>
+        </div>
       </div>
+      <!-- Divider -->
       <div class="row pt-3 mx-auto text-center">
-        <hr />
+        <div class="col">
+          <hr />
+        </div>
       </div>
+      <!-- Image 1 -->
       <div class="row d-flex justify-content-center pt-3 mx-auto text-center">
         <div class="col-lg-9">
           <img
             class="w-50 rounded"
             src="./images/youth01.jpg"
-            alt="Van Meter United Methodist youth group"
-          />
+            alt="Van Meter United Methodist youth group" />
         </div>
       </div>
+      <!-- Secondary Header 1-->
       <div class="row mx-auto pt-4 text-center">
-        <h4>
-          S.W.A.G. Youth Group<br />
-          "Saved With Amazing Grace"
-        </h4>
+        <div class="col">
+          <h4>
+            S.W.A.G. Youth Group<br />
+            "Saved With Amazing Grace"
+          </h4>
+        </div>
       </div>
+      <!-- Paragraph 1 -->
       <div class="row mx-auto pt-3 text-center">
-        <p>
-          Area youth are invited to participate in both mission projects and
-          fellowship fun.<br />
-          <strong>You need not be a church member to join us</strong>, <br />
-          and we welcome youth who wish to participate in a specific event even
-          if they do not regularly attend our meetings.<br />
-          We do need to know in advance if you want to join us for a project or
-          outing.
-        </p>
+        <div class="col">
+          <p>
+            Area youth are invited to participate in both mission projects and fellowship fun.<br />
+            <strong>You need not be a church member to join us</strong>, <br />
+            and we welcome youth who wish to participate in a specific event even if they do not
+            regularly attend our meetings.<br />
+            We do need to know in advance if you want to join us for a project or outing.
+          </p>
+        </div>
       </div>
+      <!-- Paragraph 2 -->
       <div class="row mx-auto pt-3 text-center">
-        <p>
-          <strong>Regular meetings</strong> are<br />
-          <strong>March 3 &amp; 17</strong> Middle School youth<br />
-          <strong>March 10 &amp; 24</strong> High School youth <br />
-          We meet <strong>Sundays</strong> from
-          <strong>6:30-7:30 PM</strong> (alternating middle- and high-school
-          youth groups)<br />
-          in the church sanctuary through the end of the school year.
-        </p>
+        <div class="col">
+          <p>
+            <strong>Regular meetings</strong> are<br />
+            <strong>March 3 &amp; 17</strong> Middle School youth<br />
+            <strong>March 10 &amp; 24</strong> High School youth <br />
+            We meet <strong>Sundays</strong> from <strong>6:30-7:30 PM</strong> (alternating middle-
+            and high-school youth groups)<br />
+            in the church sanctuary through the end of the school year.
+          </p>
+        </div>
       </div>
+      <!-- Paragraph 3 -->
       <div class="row mx-auto pt-3 text-center">
-        <p>
-          We will have at least one mission activity and one social activity
-          each month. <br />
-          Please come and join us, and bring a friend!
-        </p>
+        <div class="col">
+          <p>
+            We will have at least one mission activity and one social activity each month. <br />
+            Please come and join us, and bring a friend!
+          </p>
+        </div>
       </div>
+      <!-- Paragraph 4 -->
       <div class="row mx-auto pt-3 text-center">
-        <p>
-          <strong
-            >Service Project <br />
-            Sunday, March 10, 2024<br />12:30-4:30 </strong
-          ><br />
-          We will be going to the Bidwell Food Pantry to volunteer.<a
-            href="https://www.signupgenius.com/go/70A0C4CACAB2AABFC1-47224683-ronald"
-          ></a
-          ><br />
-        </p>
+        <div class="col">
+          <p>
+            <strong
+              >Service Project <br />
+              Sunday, March 10, 2024<br />12:30-4:30 </strong
+            ><br />
+            We will be going to the Bidwell Food Pantry to volunteer.<a
+              href="https://www.signupgenius.com/go/70A0C4CACAB2AABFC1-47224683-ronald"></a
+            ><br />
+          </p>
+        </div>
       </div>
+      <!-- Paragraph 5 -->
       <div class="row mx-auto pt-3 text-center">
-        <p>
-          <strong
-            >"Spare Time"<br />
-            Tuesday, March 26</strong
-          ><br />
-          Join us for a night of fun and fellowship.<strong></strong><br />
-          <br />
-          If you are interested in either of these outings,<strong>
-            text Courtney at 515-619-3968.</strong
-          >
-        </p>
+        <div class="col">
+          <p>
+            <strong
+              >"Spare Time"<br />
+              Tuesday, March 26</strong
+            ><br />
+            Join us for a night of fun and fellowship.<strong></strong><br />
+            <br />
+            If you are interested in either of these outings,<strong>
+              text Courtney at 515-619-3968.</strong
+            >
+          </p>
+        </div>
       </div>
+      <!-- Secondary Header 2 -->
       <div class="row mx-auto pt-3 text-center">
-        <h4>
-          <strong>What We Do at the Van Meter UMC S.W.A.G. Youth Group </strong>
-        </h4>
+        <div class="col">
+          <h4>
+            <strong>What We Do at the Van Meter UMC S.W.A.G. Youth Group </strong>
+          </h4>
+        </div>
       </div>
+      <!-- Paragraph 6 -->
       <div class="row mx-auto pt-3 text-center">
-        <p>
-          This is a time of thoughtful discussion, fellowship, service, and fun
-          for youth in grades 6-12.
-          <br />
-          Our past activities included missions work, outdoor adventures,
-          twice-monthly meetings, lock-ins, <br />
-          Christian concerts, fund-raising, and church potlucks. In years past,
-          our missions work included collecting <br />
-          items for women's shelters, gathering donations for an animal shelter,
-          and serving supper for the homeless.
-        </p>
+        <div class="col">
+          <p>
+            This is a time of thoughtful discussion, fellowship, service, and fun for youth in
+            grades 6-12.
+            <br />
+            Our past activities included missions work, outdoor adventures, twice-monthly meetings,
+            lock-ins, <br />
+            Christian concerts, fund-raising, and church potlucks. In years past, our missions work
+            included collecting <br />
+            items for women's shelters, gathering donations for an animal shelter, and serving
+            supper for the homeless.
+          </p>
+        </div>
       </div>
+      <!-- Image 2 -->
       <div class="row mx-auto pt-3 text-center">
         <div class="col">
           <img
             class="w-100 rounded"
             src="./images/youthSWAG.jpg"
-            alt="Youth Group:  Adventure, Service"
-          />
+            alt="Youth Group:  Adventure, Service" />
         </div>
       </div>
     </div>
@@ -331,20 +318,13 @@
     <footer class="mb-sm-3 container mx-auto p-0">
       <div class="row mx-auto bg-dark shadow text-white rounded-sm-bottom">
         <!-- UMC Logo -->
-        <div
-          class="col-lg-1 col-md-2 col-sm-12 mt-2 mb-2 align-self-center text-center"
-        >
-          <a href="#"
-            ><img height="60" width="60" src="./images/white+umc+logo.png"
-          /></a>
+        <div class="col-lg-1 col-md-2 col-sm-12 mt-2 mb-2 align-self-center text-center">
+          <a href="#"><img height="60" width="60" src="./images/white+umc+logo.png" /></a>
         </div>
         <!-- Copyright Info -->
-        <div
-          class="col-lg-8 col-md-10 col-sm-12 mt-2 align-self-center text-center text-md-start"
-        >
+        <div class="col-lg-8 col-md-10 col-sm-12 mt-2 align-self-center text-center text-md-start">
           <p>
-            &copy; <span id="year"></span> - Van Meter United Methodist Church.
-            All rights reserved.
+            &copy; <span id="year"></span> - Van Meter United Methodist Church. All rights reserved.
           </p>
         </div>
         <!-- Social Media Text -->
@@ -352,9 +332,7 @@
           <p>Stay Connected</p>
         </div>
         <!-- Social Media Image -->
-        <div
-          class="col-lg-1 mt-2 ps-lg-0 mb-3 text-center text-lg-start align-self-center"
-        >
+        <div class="col-lg-1 mt-2 ps-lg-0 mb-3 text-center text-lg-start align-self-center">
           <a href="https://www.facebook.com/profile.php?id=100064317144537"
             ><img height="35" width="35" src="./images/facebook.png"
           /></a>
