--- a/directions.html
+++ b/directions.html
@@ -2,30 +2,16 @@
 <html lang="en">
   <head>
     <!-- Preloading images for faster loading -->
-    <link
-      rel="preload"
-      href="./images/websitebanner.webp"
-      as="image"
-      fetchpriority="high"
-    />
-    <link
-      rel="preload"
-      href="./images/websitebanner.jpg"
-      as="image"
-      fetchpriority="high"
-    />
+    <link rel="preload" href="./images/websitebanner.webp" as="image" fetchpriority="high" />
+    <link rel="preload" href="./images/websitebanner.jpg" as="image" fetchpriority="high" />
     <!-- Setting metadata -->
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Directions - Van Meter United Methodist Church</title>
-    <meta
-      name="keywords"
-      content="Van Meter United Methodist Church, Van Meter, VMUMC"
-    />
+    <meta name="keywords" content="Van Meter United Methodist Church, Van Meter, VMUMC" />
     <meta
       name="description"
-      content="The Van Meter United Methodist Church site provides users with dates, times and details for the worship and fellowship of the congregation."
-    />
+      content="The Van Meter United Methodist Church site provides users with dates, times and details for the worship and fellowship of the congregation." />
     <!-- Setting icon -->
     <link rel="icon" href="./images/umc-logo.png" />
 
@@ -37,12 +23,10 @@
     <!-- Linking required CSS files -->
     <link
       rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
-    />
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" />
     <link
       rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/@tarekraafat/autocomplete.js@10.2.7/dist/css/autoComplete.01.min.css"
-    />
+      href="https://cdn.jsdelivr.net/npm/@tarekraafat/autocomplete.js@10.2.7/dist/css/autoComplete.01.min.css" />
     <link rel="stylesheet" href="./index.css" />
   </head>
   <body>
@@ -60,15 +44,11 @@
 
     <!-- Navbar section -->
     <div id="navbar-container" class="container mx-auto p-0">
-      <nav
-        class="navbar navbar-expand-lg navbar-dark bg-dark"
-        aria-label="Fifth navbar example"
-      >
+      <nav class="navbar navbar-expand-lg navbar-dark bg-dark" aria-label="Fifth navbar example">
         <div class="container-fluid">
           <!-- Brand -->
           <a class="navbar-brand" href="#"
-            ><img height="24" width="24" src="./images/white+umc+logo.png" />
-            VMUMC</a
+            ><img height="24" width="24" src="./images/white+umc+logo.png" /> VMUMC</a
           >
           <button
             class="navbar-toggler"
@@ -77,8 +57,7 @@
             data-bs-target="#navbarsExample05"
             aria-controls="navbarsExample05"
             aria-expanded="false"
-            aria-label="Toggle navigation"
-          >
+            aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
 
@@ -104,39 +83,27 @@
                 <ul class="dropdown-menu dropdown-menu-dark bg-dark shadow">
                   <!-- Dropdown item -->
                   <li>
-                    <a class="dropdown-item" href="/directions.html">
-                      Church Directions
-                    </a>
+                    <a class="dropdown-item" href="/directions.html"> Church Directions </a>
                   </li>
                   <!-- Dropdown item -->
                   <li>
-                    <a class="dropdown-item" href="/community.html">
-                      Church Community
-                    </a>
+                    <a class="dropdown-item" href="/community.html"> Church Community </a>
                   </li>
                   <!-- Dropdown item -->
                   <li>
-                    <a class="dropdown-item" href="/services.html">
-                      Church Services
-                    </a>
+                    <a class="dropdown-item" href="/services.html"> Church Services </a>
                   </li>
                   <!-- Dropdown item -->
                   <li>
-                    <a class="dropdown-item" href="/education.html">
-                      Christian Education
-                    </a>
+                    <a class="dropdown-item" href="/education.html"> Christian Education </a>
                   </li>
                   <!-- Dropdown item -->
                   <li>
-                    <a class="dropdown-item" href="/staff.html">
-                      Church Staff
-                    </a>
+                    <a class="dropdown-item" href="/staff.html"> Church Staff </a>
                   </li>
                   <!-- Dropdown item -->
                   <li>
-                    <a class="dropdown-item" href="/beliefs.html">
-                      Church Beliefs
-                    </a>
+                    <a class="dropdown-item" href="/beliefs.html"> Church Beliefs </a>
                   </li>
                 </ul>
               </li>
@@ -172,15 +139,11 @@
                 <ul class="dropdown-menu dropdown-menu-dark bg-dark">
                   <!-- Dropdown item -->
                   <li>
-                    <a class="dropdown-item" href="/contact.html">
-                      Contact Info
-                    </a>
+                    <a class="dropdown-item" href="/contact.html"> Contact Info </a>
                   </li>
                   <!-- Dropdown item -->
                   <li>
-                    <a class="dropdown-item" href="/prayer-request.html">
-                      Prayer Request
-                    </a>
+                    <a class="dropdown-item" href="/prayer-request.html"> Prayer Request </a>
                   </li>
                   <!-- Dropdown item -->
                   <li>
@@ -213,8 +176,7 @@
                 autocorrect="off"
                 autocomplete="off"
                 autocapitalize="off"
-                placeholder="Search"
-              />
+                placeholder="Search" />
             </div>
           </div>
         </div>
@@ -223,42 +185,49 @@
 
     <!-- Main content section -->
     <div class="px-3 container mx-auto bg pb-5">
+      <!-- Header -->
       <div class="row pt-5 mx-auto text-center">
-        <h1>Join Us</h1>
+        <div class="col">
+          <h1>Join Us</h1>
+        </div>
       </div>
+      <!-- Directions 1 -->
       <div class="row mx-auto pt-3">
+        <!-- Directions 1 image -->
         <div class="col-lg-5 text-center align-self-center">
-          <img
-            class="w-75 rounded"
-            src="./images/vanmeterchurch.jpg"
-            alt="Van Meter UMC"
-          />
+          <div class="col">
+            <img class="w-75 rounded" src="./images/vanmeterchurch.jpg" alt="Van Meter UMC" />
+          </div>
         </div>
-        <div class="col-lg-6 align-self-center my-4">
-          <strong>
-            Our church is at the west edge of Van Meter, Iowa, just off
-            Interstate 80, which is south of the Raccoon River in Dallas County.
-            This small, vibrant community has an independent school district and
-            is home to several businesses, the Iowa Veterans Cemetery and the
-            Bob Feller Museum.
-          </strong>
+        <!-- Directions 1 text -->
+        <div class="col-lg-6 align-self-center pt-5 pt-lg-0">
+          <div class="col">
+            <strong>
+              Our church is at the west edge of Van Meter, Iowa, just off Interstate 80, which is
+              south of the Raccoon River in Dallas County. This small, vibrant community has an
+              independent school district and is home to several businesses, the Iowa Veterans
+              Cemetery and the Bob Feller Museum.
+            </strong>
+          </div>
         </div>
       </div>
+      <!-- Directions 2 -->
       <div class="row mx-auto text-center pt-5">
-        <strong
-          >100 Hazel St. Van Meter, IA 50261<br />Parking: Lot west of the
-          church and along north entrance</strong
-        >
+        <div class="col">
+          <strong
+            >100 Hazel St. Van Meter, IA 50261<br />Parking: Lot west of the church and along north
+            entrance</strong
+          >
+        </div>
       </div>
+      <!-- Map -->
       <div class="row mx-auto text-center pt-3">
-        <a
-          href="http://maps.google.com/maps?q=100+Hazel+St.+Van+Meter,+IA+50261&amp;hl=en&amp;sll=41.525423,-93.883366&amp;sspn=0.013735,0.033023&amp;gl=us&amp;hnear=100+Hazel+St,+Van+Meter,+Dallas,+Iowa+50261&amp;t=m&amp;z=17"
-          ><img
-            class="w-75 rounded"
-            src="images/VMmap.png"
-            alt="map of Van Meter with church"
-          />
-        </a>
+        <div class="col">
+          <a
+            href="http://maps.google.com/maps?q=100+Hazel+St.+Van+Meter,+IA+50261&amp;hl=en&amp;sll=41.525423,-93.883366&amp;sspn=0.013735,0.033023&amp;gl=us&amp;hnear=100+Hazel+St,+Van+Meter,+Dallas,+Iowa+50261&amp;t=m&amp;z=17"
+            ><img class="w-75 rounded" src="images/VMmap.png" alt="map of Van Meter with church" />
+          </a>
+        </div>
       </div>
     </div>
 
@@ -266,20 +235,13 @@
     <footer class="mb-sm-3 container mx-auto p-0">
       <div class="row mx-auto bg-dark shadow text-white rounded-sm-bottom">
         <!-- UMC Logo -->
-        <div
-          class="col-lg-1 col-md-2 col-sm-12 mt-2 mb-2 align-self-center text-center"
-        >
-          <a href="#"
-            ><img height="60" width="60" src="./images/white+umc+logo.png"
-          /></a>
+        <div class="col-lg-1 col-md-2 col-sm-12 mt-2 mb-2 align-self-center text-center">
+          <a href="#"><img height="60" width="60" src="./images/white+umc+logo.png" /></a>
         </div>
         <!-- Copyright Info -->
-        <div
-          class="col-lg-8 col-md-10 col-sm-12 mt-2 align-self-center text-center text-md-start"
-        >
+        <div class="col-lg-8 col-md-10 col-sm-12 mt-2 align-self-center text-center text-md-start">
           <p>
-            &copy; <span id="year"></span> - Van Meter United Methodist Church.
-            All rights reserved.
+            &copy; <span id="year"></span> - Van Meter United Methodist Church. All rights reserved.
           </p>
         </div>
         <!-- Social Media Text -->
@@ -287,9 +249,7 @@
           <p>Stay Connected</p>
         </div>
         <!-- Social Media Image -->
-        <div
-          class="col-lg-1 mt-2 ps-lg-0 mb-3 text-center text-lg-start align-self-center"
-        >
+        <div class="col-lg-1 mt-2 ps-lg-0 mb-3 text-center text-lg-start align-self-center">
           <a href="https://www.facebook.com/profile.php?id=100064317144537"
             ><img height="35" width="35" src="./images/facebook.png"
           /></a>
