--- a/information-request.html
+++ b/information-request.html
@@ -2,30 +2,16 @@
 <html lang="en">
   <head>
     <!-- Preloading images for faster loading -->
-    <link
-      rel="preload"
-      href="./images/websitebanner.webp"
-      as="image"
-      fetchpriority="high"
-    />
-    <link
-      rel="preload"
-      href="./images/websitebanner.jpg"
-      as="image"
-      fetchpriority="high"
-    />
+    <link rel="preload" href="./images/websitebanner.webp" as="image" fetchpriority="high" />
+    <link rel="preload" href="./images/websitebanner.jpg" as="image" fetchpriority="high" />
     <!-- Setting metadata -->
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Information Request - Van Meter United Methodist Church</title>
-    <meta
-      name="keywords"
-      content="Van Meter United Methodist Church, Van Meter, VMUMC"
-    />
+    <meta name="keywords" content="Van Meter United Methodist Church, Van Meter, VMUMC" />
     <meta
       name="description"
-      content="The Van Meter United Methodist Church site provides users with dates, times and details for the worship and fellowship of the congregation."
-    />
+      content="The Van Meter United Methodist Church site provides users with dates, times and details for the worship and fellowship of the congregation." />
     <!-- Setting icon -->
     <link rel="icon" href="./images/umc-logo.png" />
 
@@ -37,12 +23,10 @@
     <!-- Linking required CSS files -->
     <link
       rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
-    />
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" />
     <link
       rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/@tarekraafat/autocomplete.js@10.2.7/dist/css/autoComplete.01.min.css"
-    />
+      href="https://cdn.jsdelivr.net/npm/@tarekraafat/autocomplete.js@10.2.7/dist/css/autoComplete.01.min.css" />
     <link rel="stylesheet" href="./index.css" />
   </head>
   <body>
@@ -60,15 +44,11 @@
 
     <!-- Navbar section -->
     <div id="navbar-container" class="container mx-auto p-0">
-      <nav
-        class="navbar navbar-expand-lg navbar-dark bg-dark"
-        aria-label="Fifth navbar example"
-      >
+      <nav class="navbar navbar-expand-lg navbar-dark bg-dark" aria-label="Fifth navbar example">
         <div class="container-fluid">
           <!-- Brand -->
           <a class="navbar-brand" href="#"
-            ><img height="24" width="24" src="./images/white+umc+logo.png" />
-            VMUMC</a
+            ><img height="24" width="24" src="./images/white+umc+logo.png" /> VMUMC</a
           >
           <button
             class="navbar-toggler"
@@ -77,8 +57,7 @@
             data-bs-target="#navbarsExample05"
             aria-controls="navbarsExample05"
             aria-expanded="false"
-            aria-label="Toggle navigation"
-          >
+            aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
 
@@ -104,39 +83,27 @@
                 <ul class="dropdown-menu dropdown-menu-dark bg-dark shadow">
                   <!-- Dropdown item -->
                   <li>
-                    <a class="dropdown-item" href="/directions.html">
-                      Church Directions
-                    </a>
+                    <a class="dropdown-item" href="/directions.html"> Church Directions </a>
                   </li>
                   <!-- Dropdown item -->
                   <li>
-                    <a class="dropdown-item" href="/community.html">
-                      Church Community
-                    </a>
+                    <a class="dropdown-item" href="/community.html"> Church Community </a>
                   </li>
                   <!-- Dropdown item -->
                   <li>
-                    <a class="dropdown-item" href="/services.html">
-                      Church Services
-                    </a>
+                    <a class="dropdown-item" href="/services.html"> Church Services </a>
                   </li>
                   <!-- Dropdown item -->
                   <li>
-                    <a class="dropdown-item" href="/education.html">
-                      Christian Education
-                    </a>
+                    <a class="dropdown-item" href="/education.html"> Christian Education </a>
                   </li>
                   <!-- Dropdown item -->
                   <li>
-                    <a class="dropdown-item" href="/staff.html">
-                      Church Staff
-                    </a>
+                    <a class="dropdown-item" href="/staff.html"> Church Staff </a>
                   </li>
                   <!-- Dropdown item -->
                   <li>
-                    <a class="dropdown-item" href="/beliefs.html">
-                      Church Beliefs
-                    </a>
+                    <a class="dropdown-item" href="/beliefs.html"> Church Beliefs </a>
                   </li>
                 </ul>
               </li>
@@ -172,15 +139,11 @@
                 <ul class="dropdown-menu dropdown-menu-dark bg-dark">
                   <!-- Dropdown item -->
                   <li>
-                    <a class="dropdown-item" href="/contact.html">
-                      Contact Info
-                    </a>
+                    <a class="dropdown-item" href="/contact.html"> Contact Info </a>
                   </li>
                   <!-- Dropdown item -->
                   <li>
-                    <a class="dropdown-item" href="/prayer-request.html">
-                      Prayer Request
-                    </a>
+                    <a class="dropdown-item" href="/prayer-request.html"> Prayer Request </a>
                   </li>
                   <!-- Dropdown item -->
                   <li>
@@ -213,8 +176,7 @@
                 autocorrect="off"
                 autocomplete="off"
                 autocapitalize="off"
-                placeholder="Search"
-              />
+                placeholder="Search" />
             </div>
           </div>
         </div>
@@ -222,42 +184,40 @@
     </div>
     <!-- Main content section -->
     <div class="px-3 text-center container mx-auto bg pb-5">
+      <!-- Header -->
       <div class="row mx-auto text-center pt-5">
-        <h1>Information Request Form</h1>
+        <div class="col">
+          <h1>Information Request Form</h1>
+        </div>
       </div>
-
-      <hr />
+      <!-- Divider -->
+      <div class="row mx-auto pb-3">
+        <div class="col">
+          <hr />
+        </div>
+      </div>
+      <!-- Form -->
       <form
         enctype="multipart/form-data"
         method="post"
         action="http://www.response-o-matic.com/mail.php"
-        accept-charset="UTF-8"
-      >
+        accept-charset="UTF-8">
+        <!-- Hidden Inputs -->
         <div>
-          <input
-            type="hidden"
-            name="acctid"
-            id="acctid"
-            value="u7p9qzi9dh3ql0yy"
-          />
+          <input type="hidden" name="acctid" id="acctid" value="u7p9qzi9dh3ql0yy" />
           <input type="hidden" name="formid" id="formid" value="799931" />
           <input
             type="hidden"
             name="required_vars"
             id="required_vars"
-            value="name,field-4be9134b3734056,field-96b2c9af1499026,field-469dd9a5020b020"
-          />
+            value="name,field-4be9134b3734056,field-96b2c9af1499026,field-469dd9a5020b020" />
         </div>
+        <!-- Name Field -->
         <div class="form-floating mb-3">
-          <input
-            type="text"
-            class="form-control"
-            id="name"
-            placeholder="Name"
-            required
-          />
+          <input type="text" class="form-control" id="name" placeholder="Name" required />
           <label for="name">Name</label>
         </div>
+        <!-- Address Field -->
         <div class="form-floating mb-3">
           <input
             type="text"
@@ -265,10 +225,10 @@
             id="field-4be9134b3734056"
             placeholder="Address"
             name="field-4be9134b3734056"
-            required
-          />
+            required />
           <label for="field-4be9134b3734056">Address</label>
         </div>
+        <!-- Email Field -->
         <div class="form-floating mb-3">
           <input
             type="email"
@@ -276,10 +236,10 @@
             id="email"
             placeholder="Email Address"
             name="email"
-            required
-          />
+            required />
           <label for="email">Email Address</label>
         </div>
+        <!-- Phone Number Field -->
         <div class="form-floating mb-3">
           <input
             type="tel"
@@ -289,10 +249,10 @@
             name="field-96b2c9af1499026"
             oninvalid="this.setCustomValidity('Please enter phone number as (###)###-#### or ###-###-####')"
             oninput="(function(e){e.setCustomValidity(''); return !e.validity.valid && e.setCustomValidity(' ')})(this)"
-            required
-          />
+            required />
           <label for="field-96b2c9af1499026">Phone</label>
         </div>
+        <!-- Requested Info Field -->
         <div class="form-floating mb-3">
           <textarea
             class="form-control"
@@ -300,11 +260,10 @@
             id="field-469dd9a5020b020"
             name="field-469dd9a5020b020"
             style="height: 150px"
-            required
-          ></textarea>
+            required></textarea>
           <label for="field-469dd9a5020b020">Information You Need</label>
         </div>
-
+        <!-- Submit Button -->
         <button class="btn btn-primary w-100" type="submit">Submit form</button>
       </form>
     </div>
@@ -313,20 +272,13 @@
     <footer class="mb-sm-3 container mx-auto p-0">
       <div class="row mx-auto bg-dark shadow text-white rounded-sm-bottom">
         <!-- UMC Logo -->
-        <div
-          class="col-lg-1 col-md-2 col-sm-12 mt-2 mb-2 align-self-center text-center"
-        >
-          <a href="#"
-            ><img height="60" width="60" src="./images/white+umc+logo.png"
-          /></a>
+        <div class="col-lg-1 col-md-2 col-sm-12 mt-2 mb-2 align-self-center text-center">
+          <a href="#"><img height="60" width="60" src="./images/white+umc+logo.png" /></a>
         </div>
         <!-- Copyright Info -->
-        <div
-          class="col-lg-8 col-md-10 col-sm-12 mt-2 align-self-center text-center text-md-start"
-        >
+        <div class="col-lg-8 col-md-10 col-sm-12 mt-2 align-self-center text-center text-md-start">
           <p>
-            &copy; <span id="year"></span> - Van Meter United Methodist Church.
-            All rights reserved.
+            &copy; <span id="year"></span> - Van Meter United Methodist Church. All rights reserved.
           </p>
         </div>
         <!-- Social Media Text -->
@@ -334,9 +286,7 @@
           <p>Stay Connected</p>
         </div>
         <!-- Social Media Image -->
-        <div
-          class="col-lg-1 mt-2 ps-lg-0 mb-3 text-center text-lg-start align-self-center"
-        >
+        <div class="col-lg-1 mt-2 ps-lg-0 mb-3 text-center text-lg-start align-self-center">
           <a href="https://www.facebook.com/profile.php?id=100064317144537"
             ><img height="35" width="35" src="./images/facebook.png"
           /></a>
