--- a/missionmoment.html
+++ b/missionmoment.html
@@ -2,18 +2,8 @@
 <html lang="en">
   <head>
     <!-- Preloading images for faster loading -->
-    <link
-      rel="preload"
-      href="./images/websitebanner.webp"
-      as="image"
-      fetchpriority="high"
-    />
-    <link
-      rel="preload"
-      href="./images/websitebanner.jpg"
-      as="image"
-      fetchpriority="high"
-    />
+    <link rel="preload" href="./images/websitebanner.webp" as="image" fetchpriority="high" />
+    <link rel="preload" href="./images/websitebanner.jpg" as="image" fetchpriority="high" />
 
     <!-- Linking required Javascript files -->
     <script src="navbar.js" defer></script>
@@ -23,26 +13,20 @@
     <!-- Linking required CSS files -->
     <link
       rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
-    />
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" />
     <link
       rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/@tarekraafat/autocomplete.js@10.2.7/dist/css/autoComplete.01.min.css"
-    />
+      href="https://cdn.jsdelivr.net/npm/@tarekraafat/autocomplete.js@10.2.7/dist/css/autoComplete.01.min.css" />
     <link rel="stylesheet" href="./index.css" />
 
     <!-- Setting metadata -->
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>A Mission Moment - Van Meter United Methodist Church</title>
-    <meta
-      name="keywords"
-      content="Van Meter United Methodist Church, Van Meter, VMUMC"
-    />
+    <meta name="keywords" content="Van Meter United Methodist Church, Van Meter, VMUMC" />
     <meta
       name="description"
-      content="The Van Meter United Methodist Church site provides users with dates, times and details for the worship and fellowship of the congregation."
-    />
+      content="The Van Meter United Methodist Church site provides users with dates, times and details for the worship and fellowship of the congregation." />
     <!-- Setting icon -->
     <link rel="icon" href="./images/umc-logo.png" />
   </head>
@@ -62,15 +46,11 @@
 
     <!-- Navbar section -->
     <div id="navbar-container" class="container mx-auto p-0">
-      <nav
-        class="navbar navbar-expand-lg navbar-dark bg-dark"
-        aria-label="Fifth navbar example"
-      >
+      <nav class="navbar navbar-expand-lg navbar-dark bg-dark" aria-label="Fifth navbar example">
         <div class="container-fluid">
           <!-- Brand -->
           <a class="navbar-brand" href="#"
-            ><img height="24" width="24" src="./images/white+umc+logo.png" />
-            VMUMC</a
+            ><img height="24" width="24" src="./images/white+umc+logo.png" /> VMUMC</a
           >
           <button
             class="navbar-toggler"
@@ -79,8 +59,7 @@
             data-bs-target="#navbarsExample05"
             aria-controls="navbarsExample05"
             aria-expanded="false"
-            aria-label="Toggle navigation"
-          >
+            aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
 
@@ -106,39 +85,27 @@
                 <ul class="dropdown-menu dropdown-menu-dark bg-dark shadow">
                   <!-- Dropdown item -->
                   <li>
-                    <a class="dropdown-item" href="/directions.html">
-                      Church Directions
-                    </a>
+                    <a class="dropdown-item" href="/directions.html"> Church Directions </a>
                   </li>
                   <!-- Dropdown item -->
                   <li>
-                    <a class="dropdown-item" href="/community.html">
-                      Church Community
-                    </a>
+                    <a class="dropdown-item" href="/community.html"> Church Community </a>
                   </li>
                   <!-- Dropdown item -->
                   <li>
-                    <a class="dropdown-item" href="/services.html">
-                      Church Services
-                    </a>
+                    <a class="dropdown-item" href="/services.html"> Church Services </a>
                   </li>
                   <!-- Dropdown item -->
                   <li>
-                    <a class="dropdown-item" href="/education.html">
-                      Christian Education
-                    </a>
+                    <a class="dropdown-item" href="/education.html"> Christian Education </a>
                   </li>
                   <!-- Dropdown item -->
                   <li>
-                    <a class="dropdown-item" href="/staff.html">
-                      Church Staff
-                    </a>
+                    <a class="dropdown-item" href="/staff.html"> Church Staff </a>
                   </li>
                   <!-- Dropdown item -->
                   <li>
-                    <a class="dropdown-item" href="/beliefs.html">
-                      Church Beliefs
-                    </a>
+                    <a class="dropdown-item" href="/beliefs.html"> Church Beliefs </a>
                   </li>
                 </ul>
               </li>
@@ -174,15 +141,11 @@
                 <ul class="dropdown-menu dropdown-menu-dark bg-dark">
                   <!-- Dropdown item -->
                   <li>
-                    <a class="dropdown-item" href="/contact.html">
-                      Contact Info
-                    </a>
+                    <a class="dropdown-item" href="/contact.html"> Contact Info </a>
                   </li>
                   <!-- Dropdown item -->
                   <li>
-                    <a class="dropdown-item" href="/prayer-request.html">
-                      Prayer Request
-                    </a>
+                    <a class="dropdown-item" href="/prayer-request.html"> Prayer Request </a>
                   </li>
                   <!-- Dropdown item -->
                   <li>
@@ -215,8 +178,7 @@
                 autocorrect="off"
                 autocomplete="off"
                 autocapitalize="off"
-                placeholder="Search"
-              />
+                placeholder="Search" />
             </div>
           </div>
         </div>
@@ -224,145 +186,157 @@
     </div>
     <!-- Main content section -->
     <div class="container mx-auto px-3 bg pb-5">
+      <!-- Header -->
       <div class="row pt-5 mx-auto text-center">
-        <h1>A Mission Moment</h1>
+        <div class="col">
+          <h1>A Mission Moment</h1>
+        </div>
       </div>
+      <!-- Divider -->
       <div class="row pt-3 mx-auto text-center">
-        <hr />
+        <div class="col">
+          <hr />
+        </div>
       </div>
+      <!-- Secondary Header -->
       <div class="row pt-3 mx-auto text-center">
-        <h3>Bidwell Pantry (Families Forward); Food Pantry in Adel</h3>
+        <div class="col">
+          <h3>Bidwell Pantry (Families Forward); Food Pantry in Adel</h3>
+        </div>
       </div>
+      <!-- Families Forward Section -->
       <div class="row pt-3 mx-auto">
         <div class="col-lg-6 align-self-center">
+          <!-- Families Forward Paragraph 1 -->
           <div class="row">
-            <p>
-              <strong>Bidwell Pantry (Families Forward)</strong>
-              <br />
-              This month's mission is in support of Families Forward, a merger
-              of Bidwell Riverside Center and Hawthorn Hill. The original four
-              programs -- Bidwell Pantry, Child Develop-ment Center, New
-              Directions Shelter, and The Home Connection -- remain, work-ing
-              together to provide compassionate, life-changing assistance to
-              families and their path to self-sufficiency.
-            </p>
+            <div class="col">
+              <p>
+                <strong>Bidwell Pantry (Families Forward)</strong>
+                <br />
+                This month's mission is in support of Families Forward, a merger of Bidwell
+                Riverside Center and Hawthorn Hill. The original four programs -- Bidwell Pantry,
+                Child Develop-ment Center, New Directions Shelter, and The Home Connection --
+                remain, work-ing together to provide compassionate, life-changing assistance to
+                families and their path to self-sufficiency.
+              </p>
+            </div>
           </div>
+          <!-- Families Forward Paragraph 2 -->
           <div class="row">
-            <p>
-              The Missons team will be joining with the youth group in their
-              March 10 trip to Bidwell Pantry where they will help organize
-              donations. The Bidwell Pantry helps families put food on their
-              tables and clothes on their backs, reducing the strain the
-              families are experiencing, enabling them to focus on other ways
-              they can help themselves.
-            </p>
+            <div class="col">
+              <p>
+                The Missons team will be joining with the youth group in their March 10 trip to
+                Bidwell Pantry where they will help organize donations. The Bidwell Pantry helps
+                families put food on their tables and clothes on their backs, reducing the strain
+                the families are experiencing, enabling them to focus on other ways they can help
+                themselves.
+              </p>
+            </div>
           </div>
         </div>
+        <!-- Families Forward Image -->
         <div class="col-lg-6 align-self-center text-center">
           <img
             class="w-25 rounded"
             src="./images/families_forward_Bidwell.jpg"
-            alt="families forward -- services + shelter -- Bidwell Pantry"
-          />
+            alt="families forward -- services + shelter -- Bidwell Pantry" />
         </div>
       </div>
-
+      <!-- Bags For Bidwell Section -->
       <div class="row pt-3 mx-auto">
+        <!-- Paragraph -->
         <div class="col-lg-6 align-self-center">
           <p>
             <strong>Bags for Bidwell</strong><br />
-            The Bidwell Pantry needs used grocery bags to help pantry guests
-            carry their groceries. The bags can be paper, cloth, or the usual
-            plastic. Since the pantry serves an average of 5,000 individuals a
-            month and each shopper uses 2-3 bags, they need a lot of bags.
-            There's a tub in the church entryway where you can put your donated
-            bags. We plan to continue collecting these throughout the year, so
-            please keep bringing them in.
+            The Bidwell Pantry needs used grocery bags to help pantry guests carry their groceries.
+            The bags can be paper, cloth, or the usual plastic. Since the pantry serves an average
+            of 5,000 individuals a month and each shopper uses 2-3 bags, they need a lot of bags.
+            There's a tub in the church entryway where you can put your donated bags. We plan to
+            continue collecting these throughout the year, so please keep bringing them in.
           </p>
         </div>
+        <!-- Bidwell Bags Images Section -->
         <div class="col-lg-6 align-self-center text-center">
           <div class="row">
+            <!-- Image 1 -->
             <div class="col-lg-4 align-self-center text-lg-end">
               <img
                 class="w-50 rounded"
                 src="./images/missions_bag_1.jpg"
                 alt="Good Samaritan Food Pantry 
-          serving our neighbors since 1982"
-              />
+          serving our neighbors since 1982" />
             </div>
+            <!-- Image 2 -->
             <div class="col-lg-4 align-self-center text-lg-center pt-3 pt-lg-0">
               <img
                 class="w-50 rounded"
                 src="./images/missions_bag_2.jpg"
-                alt="white toothpaste coming out of a toothpaste tube"
-              />
+                alt="white toothpaste coming out of a toothpaste tube" />
             </div>
+            <!-- Image 3 -->
             <div class="col-lg-4 align-self-center text-lg-start pt-3 pt-lg-0">
               <img
                 class="w-50 rounded"
                 src="./images/missions_bag_3.jpg"
-                alt="white toothpaste coming out of a toothpaste tube"
-              />
+                alt="white toothpaste coming out of a toothpaste tube" />
             </div>
           </div>
         </div>
       </div>
+      <!-- Good Samaritan Section -->
       <div class="row pt-3 mx-auto">
+        <!-- Good Samaritan Paragraph -->
         <div class="col-lg-6 align-self-center">
           <p>
             <strong>Adel (Good Samaritan) Food Pantry</strong><br />
             This month's personal item is <strong>toothpaste</strong>. <br />
-            Please place your donation in the marked tub in the church
-            entryway.<br />
+            Please place your donation in the marked tub in the church entryway.<br />
             Learn more about the
             <a href="/Publications/MissionsFoodPantry.pdf">food pantry here</a>
             and <a href="/missionmomentFoodPantry.html">here</a>.
           </p>
         </div>
+        <!-- Good Samaritan Images Section -->
         <div class="col-lg-6 align-self-center text-center">
           <div class="row">
+            <!-- Good Samaritan Image 1 -->
             <div class="col-lg-6 align-self-center text-lg-end">
               <img
                 class="w-75 rounded"
                 src="./images/GoodSamaritanFoodPantryLogo.jpg"
                 alt="Good Samaritan Food Pantry 
-            serving our neighbors since 1982"
-              />
+            serving our neighbors since 1982" />
             </div>
+            <!-- Good Samaritan Image 2 -->
             <div class="col-lg-6 align-self-center text-lg-start pt-3 pt-lg-0">
               <img
                 class="w-50 rounded"
                 src="./images/missions_toothpaste2.png"
-                alt="white toothpaste coming out of a toothpaste tube"
-              />
+                alt="white toothpaste coming out of a toothpaste tube" />
             </div>
           </div>
         </div>
       </div>
+      <!-- Mission Teams Link -->
       <div class="row pt-5 mx-auto text-center">
-        <h3>
-          <a href="missionmomentTeams.html">Learn about Mission Teams</a>
-        </h3>
+        <div class="col">
+          <h3>
+            <a href="missionmomentTeams.html">Learn about Mission Teams</a>
+          </h3>
+        </div>
       </div>
     </div>
     <!-- Footer Section -->
     <footer class="mb-sm-3 container mx-auto p-0">
       <div class="row mx-auto bg-dark shadow text-white rounded-sm-bottom">
         <!-- UMC Logo -->
-        <div
-          class="col-lg-1 col-md-2 col-sm-12 mt-2 mb-2 align-self-center text-center"
-        >
-          <a href="#"
-            ><img height="60" width="60" src="./images/white+umc+logo.png"
-          /></a>
+        <div class="col-lg-1 col-md-2 col-sm-12 mt-2 mb-2 align-self-center text-center">
+          <a href="#"><img height="60" width="60" src="./images/white+umc+logo.png" /></a>
         </div>
         <!-- Copyright Info -->
-        <div
-          class="col-lg-8 col-md-10 col-sm-12 mt-2 align-self-center text-center text-md-start"
-        >
+        <div class="col-lg-8 col-md-10 col-sm-12 mt-2 align-self-center text-center text-md-start">
           <p>
-            &copy; <span id="year"></span> - Van Meter United Methodist Church.
-            All rights reserved.
+            &copy; <span id="year"></span> - Van Meter United Methodist Church. All rights reserved.
           </p>
         </div>
         <!-- Social Media Text -->
@@ -370,9 +344,7 @@
           <p>Stay Connected</p>
         </div>
         <!-- Social Media Image -->
-        <div
-          class="col-lg-1 mt-2 ps-lg-0 mb-3 text-center text-lg-start align-self-center"
-        >
+        <div class="col-lg-1 mt-2 ps-lg-0 mb-3 text-center text-lg-start align-self-center">
           <a href="https://www.facebook.com/profile.php?id=100064317144537"
             ><img height="35" width="35" src="./images/facebook.png"
           /></a>
