--- a/missionmomentFoodPantry.html
+++ b/missionmomentFoodPantry.html
@@ -2,18 +2,8 @@
 <html lang="en">
   <head>
     <!-- Preloading images for faster loading -->
-    <link
-      rel="preload"
-      href="./images/websitebanner.webp"
-      as="image"
-      fetchpriority="high"
-    />
-    <link
-      rel="preload"
-      href="./images/websitebanner.jpg"
-      as="image"
-      fetchpriority="high"
-    />
+    <link rel="preload" href="./images/websitebanner.webp" as="image" fetchpriority="high" />
+    <link rel="preload" href="./images/websitebanner.jpg" as="image" fetchpriority="high" />
 
     <!-- Linking required Javascript files -->
     <script src="navbar.js" defer></script>
@@ -23,26 +13,20 @@
     <!-- Linking required CSS files -->
     <link
       rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
-    />
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" />
     <link
       rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/@tarekraafat/autocomplete.js@10.2.7/dist/css/autoComplete.01.min.css"
-    />
+      href="https://cdn.jsdelivr.net/npm/@tarekraafat/autocomplete.js@10.2.7/dist/css/autoComplete.01.min.css" />
     <link rel="stylesheet" href="./index.css" />
 
     <!-- Setting metadata -->
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>A Mission Moment - Van Meter United Methodist Church</title>
-    <meta
-      name="keywords"
-      content="Van Meter United Methodist Church, Van Meter, VMUMC"
-    />
+    <meta name="keywords" content="Van Meter United Methodist Church, Van Meter, VMUMC" />
     <meta
       name="description"
-      content="The Van Meter United Methodist Church site provides users with dates, times and details for the worship and fellowship of the congregation."
-    />
+      content="The Van Meter United Methodist Church site provides users with dates, times and details for the worship and fellowship of the congregation." />
     <!-- Setting icon -->
     <link rel="icon" href="./images/umc-logo.png" />
   </head>
@@ -62,15 +46,11 @@
 
     <!-- Navbar section -->
     <div id="navbar-container" class="container mx-auto p-0">
-      <nav
-        class="navbar navbar-expand-lg navbar-dark bg-dark"
-        aria-label="Fifth navbar example"
-      >
+      <nav class="navbar navbar-expand-lg navbar-dark bg-dark" aria-label="Fifth navbar example">
         <div class="container-fluid">
           <!-- Brand -->
           <a class="navbar-brand" href="#"
-            ><img height="24" width="24" src="./images/white+umc+logo.png" />
-            VMUMC</a
+            ><img height="24" width="24" src="./images/white+umc+logo.png" /> VMUMC</a
           >
           <button
             class="navbar-toggler"
@@ -79,8 +59,7 @@
             data-bs-target="#navbarsExample05"
             aria-controls="navbarsExample05"
             aria-expanded="false"
-            aria-label="Toggle navigation"
-          >
+            aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
 
@@ -106,39 +85,27 @@
                 <ul class="dropdown-menu dropdown-menu-dark bg-dark shadow">
                   <!-- Dropdown item -->
                   <li>
-                    <a class="dropdown-item" href="/directions.html">
-                      Church Directions
-                    </a>
+                    <a class="dropdown-item" href="/directions.html"> Church Directions </a>
                   </li>
                   <!-- Dropdown item -->
                   <li>
-                    <a class="dropdown-item" href="/community.html">
-                      Church Community
-                    </a>
+                    <a class="dropdown-item" href="/community.html"> Church Community </a>
                   </li>
                   <!-- Dropdown item -->
                   <li>
-                    <a class="dropdown-item" href="/services.html">
-                      Church Services
-                    </a>
+                    <a class="dropdown-item" href="/services.html"> Church Services </a>
                   </li>
                   <!-- Dropdown item -->
                   <li>
-                    <a class="dropdown-item" href="/education.html">
-                      Christian Education
-                    </a>
+                    <a class="dropdown-item" href="/education.html"> Christian Education </a>
                   </li>
                   <!-- Dropdown item -->
                   <li>
-                    <a class="dropdown-item" href="/staff.html">
-                      Church Staff
-                    </a>
+                    <a class="dropdown-item" href="/staff.html"> Church Staff </a>
                   </li>
                   <!-- Dropdown item -->
                   <li>
-                    <a class="dropdown-item" href="/beliefs.html">
-                      Church Beliefs
-                    </a>
+                    <a class="dropdown-item" href="/beliefs.html"> Church Beliefs </a>
                   </li>
                 </ul>
               </li>
@@ -174,15 +141,11 @@
                 <ul class="dropdown-menu dropdown-menu-dark bg-dark">
                   <!-- Dropdown item -->
                   <li>
-                    <a class="dropdown-item" href="/contact.html">
-                      Contact Info
-                    </a>
+                    <a class="dropdown-item" href="/contact.html"> Contact Info </a>
                   </li>
                   <!-- Dropdown item -->
                   <li>
-                    <a class="dropdown-item" href="/prayer-request.html">
-                      Prayer Request
-                    </a>
+                    <a class="dropdown-item" href="/prayer-request.html"> Prayer Request </a>
                   </li>
                   <!-- Dropdown item -->
                   <li>
@@ -215,8 +178,7 @@
                 autocorrect="off"
                 autocomplete="off"
                 autocapitalize="off"
-                placeholder="Search"
-              />
+                placeholder="Search" />
             </div>
           </div>
         </div>
@@ -224,136 +186,177 @@
     </div>
     <!-- Main content section -->
     <div class="container mx-auto px-3 bg pb-5">
+      <!-- Header -->
       <div class="row pt-5 mx-auto text-center">
-        <h1>A Mission Moment</h1>
-      </div>
-      <div class="row pt-3 mx-auto">
-        <hr />
-      </div>
-      <div class="row pt-3 mx-auto text-center">
-        <h3>Food Pantry Needs Donations</h3>
-      </div>
-      <div class="row pt-3 mx-auto">
-        <p>
-          The Good Samaritan Food Pantry in Adel serves the school districts of
-          Van Meter and ADM (Adel, De Soto, and Minburn). The pantry regularly
-          distributes over 4000 cans each month, and the need continues to grow.
-        </p>
-      </div>
-      <div class="row pt-3 mx-auto">
-        <p>
-          Cash donations are wonderful because the money can be used for
-          purchases at the Food Bank of Iowa at 17¢ a pound. Donations of goods
-          are, of course, also welcome.
-        </p>
-      </div>
-      <div class="row pt-3 mx-auto">
-        <p>The pantry is asking for:</p>
-      </div>
-      <div class="row pt-4 mx-auto">
-        <div class="col-lg-7">
-          <div class="row mx-auto">
-            <ul class="list-group flex-wrap text-center">
-              <div class="row">
-                <li class="list-group-item col-lg-12 bg-dark text-white">
-                  <h3>Foods most needed</h3>
-                </li>
-                <li class="list-group-item col-lg-6">Peanut butter</li>
-                <li class="list-group-item col-lg-6">Jelly</li>
-                <li class="list-group-item col-lg-6">Bottled juice</li>
-                <li class="list-group-item col-lg-6">Cereal (hot & cold)</li>
-                <li class="list-group-item col-lg-6">Hamburger Helper</li>
-                <li class="list-group-item col-lg-6">Fruits</li>
-                <li class="list-group-item col-lg-6">Flour</li>
-                <li class="list-group-item col-lg-6">Sugar</li>
-                <li class="list-group-item col-lg-6">Crackers</li>
-                <li class="list-group-item col-lg-6">
-                  Canned meats (tuna & chicken)
-                </li>
-                <li class="list-group-item col-lg-6">Spaghetti sauce</li>
-                <li class="list-group-item col-lg-6">Pasta</li>
-              </div>
-            </ul>
-          </div>
-          <div class="row pt-3">
-            <p>
-              (Remember to check your expiration dates on canned goods, as the
-              pantry cannot use expired foods.)
-            </p>
-          </div>
+        <div class="col">
+          <h1>A Mission Moment</h1>
         </div>
+      </div>
+      <!-- Divider -->
+      <div class="row pt-3 mx-auto">
+        <div class="col">
+          <hr />
+        </div>
+      </div>
+      <!-- Secondary Header -->
+      <div class="row pt-3 mx-auto text-center">
+        <div class="col">
+          <h3>Food Pantry Needs Donations</h3>
+        </div>
+      </div>
+      <!-- Paragraph 1 -->
+      <div class="row pt-3 mx-auto">
+        <div class="col">
+          <p>
+            The Good Samaritan Food Pantry in Adel serves the school districts of Van Meter and ADM
+            (Adel, De Soto, and Minburn). The pantry regularly distributes over 4000 cans each
+            month, and the need continues to grow.
+          </p>
+        </div>
+      </div>
+      <!-- Paragraph 2 -->
+      <div class="row pt-3 mx-auto">
+        <div class="col">
+          <p>
+            Cash donations are wonderful because the money can be used for purchases at the Food
+            Bank of Iowa at 17¢ a pound. Donations of goods are, of course, also welcome.
+          </p>
+        </div>
+      </div>
+      <!-- Paragraph 3 -->
+      <div class="row pt-3 mx-auto">
+        <div class="col">
+          <p>The pantry is asking for:</p>
+        </div>
+      </div>
+      <!-- Needed Foods Section -->
+      <div class="row pt-4 mx-auto">
+        <!-- Needed Foods Table -->
+        <div class="col-lg-7">
+          <ul class="list-group flex-wrap text-center">
+            <div class="row">
+              <!-- Table Header -->
+              <li class="list-group-item col-lg-12 bg-dark text-white">
+                <h3>Foods most needed</h3>
+              </li>
+              <!-- Table Item -->
+              <li class="list-group-item col-lg-6">Peanut butter</li>
+              <!-- Table Item -->
+              <li class="list-group-item col-lg-6">Jelly</li>
+              <!-- Table Item -->
+              <li class="list-group-item col-lg-6">Bottled juice</li>
+              <!-- Table Item -->
+              <li class="list-group-item col-lg-6">Cereal (hot & cold)</li>
+              <!-- Table Item -->
+              <li class="list-group-item col-lg-6">Hamburger Helper</li>
+              <li class="list-group-item col-lg-6">Fruits</li>
+              <!-- Table Item -->
+              <li class="list-group-item col-lg-6">Flour</li>
+              <!-- Table Item -->
+              <li class="list-group-item col-lg-6">Sugar</li>
+              <!-- Table Item -->
+              <li class="list-group-item col-lg-6">Crackers</li>
+              <!-- Table Item -->
+              <li class="list-group-item col-lg-6">Canned meats (tuna & chicken)</li>
+              <!-- Table Item -->
+              <li class="list-group-item col-lg-6">Spaghetti sauce</li>
+              <!-- Table Item -->
+              <li class="list-group-item col-lg-6">Pasta</li>
+            </div>
+          </ul>
+        </div>
+        <!-- Image 1 -->
         <div class="col-lg-5 text-center pt-3 pt-lg-0 align-self-center">
           <img
             class="w-75 rounded"
             src="./images/GoodSamaritanFoodPantryLogo.jpg"
-            alt="Good Samaritan Food Pantry -- serving our neighbors since 1982"
-          />
+            alt="Good Samaritan Food Pantry -- serving our neighbors since 1982" />
         </div>
       </div>
+      <!-- Paragraph 4 -->
+      <div class="row pt-3">
+        <div class="col">
+          <p>
+            (Remember to check your expiration dates on canned goods, as the pantry cannot use
+            expired foods.)
+          </p>
+        </div>
+      </div>
+      <!-- Need Personal Care Section -->
       <div class="row pt-4 mx-auto">
         <div class="col-lg-7">
           <ul class="list-group flex-wrap text-center">
             <div class="row">
+              <!-- Table Header -->
               <li class="list-group-item col-lg-12 bg-dark text-white">
                 <h3>Personal Care Items Needed</h3>
               </li>
+              <!-- Table Item -->
               <li class="list-group-item col-lg-6">Toothbrushes</li>
+              <!-- Table Item -->
               <li class="list-group-item col-lg-6">Bar soap</li>
+              <!-- Table Item -->
               <li class="list-group-item col-lg-6">Toothpaste</li>
+              <!-- Table Item -->
               <li class="list-group-item col-lg-6">Toilet paper</li>
+              <!-- Table Item -->
               <li class="list-group-item col-lg-6">Deodorant</li>
+              <!-- Table Item -->
               <li class="list-group-item col-lg-6">Laundry detergent</li>
+              <!-- Table Item -->
               <li class="list-group-item col-lg-6">Shampoo</li>
+              <!-- Table Item -->
               <li class="list-group-item col-lg-6">Conditioner</li>
+              <!-- Table Item -->
               <li class="list-group-item col-lg-6">Facial tissue</li>
+              <!-- Table Item -->
               <li class="list-group-item col-lg-6">Dish detergent</li>
             </div>
           </ul>
         </div>
+        <!-- Image 2 -->
         <div class="col-lg-5 text-center pt-3 pt-lg-0 align-self-center">
-          <img
-            class="w-50 rounded"
-            src="./images/food.jpg"
-            alt="food for the food pantry"
-          />
+          <img class="w-50 rounded" src="./images/food.jpg" alt="food for the food pantry" />
         </div>
       </div>
+      <!-- Paragraph 5 -->
       <div class="row pt-3 mx-auto">
-        <p>
-          For more information on the Good Samaritan Food Pantry,
-          <a href="http://www.adelfoodpantry.com">visit their website</a>
-        </p>
+        <div class="col">
+          <p>
+            For more information on the Good Samaritan Food Pantry,
+            <a href="http://www.adelfoodpantry.com">visit their website</a>
+          </p>
+        </div>
       </div>
+      <!-- Paragraph 6 -->
       <div class="row pt-3 mx-auto">
-        <p>
-          Contact Suzy Lowman or Rev. Beth if you would like more information
-          about our church's involvement, or if would like to help out.
-        </p>
+        <div class="col">
+          <p>
+            Contact Suzy Lowman or Rev. Beth if you would like more information about our church's
+            involvement, or if would like to help out.
+          </p>
+        </div>
       </div>
+      <!-- Mission Teams Link -->
       <div class="row pt-3 mx-auto text-center">
-        <h3>
-          <a href="/missionmomentTeams.html">Learn about Mission Teams</a>
-        </h3>
+        <div class="col">
+          <h3>
+            <a href="/missionmomentTeams.html">Learn about Mission Teams</a>
+          </h3>
+        </div>
       </div>
     </div>
     <!-- Footer Section -->
     <footer class="mb-sm-3 container mx-auto p-0">
       <div class="row mx-auto bg-dark shadow text-white rounded-sm-bottom">
         <!-- UMC Logo -->
-        <div
-          class="col-lg-1 col-md-2 col-sm-12 mt-2 mb-2 align-self-center text-center"
-        >
-          <a href="#"
-            ><img height="60" width="60" src="./images/white+umc+logo.png"
-          /></a>
+        <div class="col-lg-1 col-md-2 col-sm-12 mt-2 mb-2 align-self-center text-center">
+          <a href="#"><img height="60" width="60" src="./images/white+umc+logo.png" /></a>
         </div>
         <!-- Copyright Info -->
-        <div
-          class="col-lg-8 col-md-10 col-sm-12 mt-2 align-self-center text-center text-md-start"
-        >
+        <div class="col-lg-8 col-md-10 col-sm-12 mt-2 align-self-center text-center text-md-start">
           <p>
-            &copy; <span id="year"></span> - Van Meter United Methodist Church.
-            All rights reserved.
+            &copy; <span id="year"></span> - Van Meter United Methodist Church. All rights reserved.
           </p>
         </div>
         <!-- Social Media Text -->
@@ -361,9 +364,7 @@
           <p>Stay Connected</p>
         </div>
         <!-- Social Media Image -->
-        <div
-          class="col-lg-1 mt-2 ps-lg-0 mb-3 text-center text-lg-start align-self-center"
-        >
+        <div class="col-lg-1 mt-2 ps-lg-0 mb-3 text-center text-lg-start align-self-center">
           <a href="https://www.facebook.com/profile.php?id=100064317144537"
             ><img height="35" width="35" src="./images/facebook.png"
           /></a>
