--- a/pastorsmessageAshWednesday.html
+++ b/pastorsmessageAshWednesday.html
@@ -2,18 +2,8 @@
 <html lang="en">
   <head>
     <!-- Preloading images for faster loading -->
-    <link
-      rel="preload"
-      href="./images/websitebanner.webp"
-      as="image"
-      fetchpriority="high"
-    />
-    <link
-      rel="preload"
-      href="./images/websitebanner.jpg"
-      as="image"
-      fetchpriority="high"
-    />
+    <link rel="preload" href="./images/websitebanner.webp" as="image" fetchpriority="high" />
+    <link rel="preload" href="./images/websitebanner.jpg" as="image" fetchpriority="high" />
 
     <!-- Linking required Javascript files -->
     <script src="navbar.js" defer></script>
@@ -23,26 +13,20 @@
     <!-- Linking required CSS files -->
     <link
       rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
-    />
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" />
     <link
       rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/@tarekraafat/autocomplete.js@10.2.7/dist/css/autoComplete.01.min.css"
-    />
+      href="https://cdn.jsdelivr.net/npm/@tarekraafat/autocomplete.js@10.2.7/dist/css/autoComplete.01.min.css" />
     <link rel="stylesheet" href="./index.css" />
 
     <!-- Setting metadata -->
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Pastor&rsquo;s Message - Van Meter United Methodist Church</title>
-    <meta
-      name="keywords"
-      content="Van Meter United Methodist Church, Van Meter, VMUMC"
-    />
+    <meta name="keywords" content="Van Meter United Methodist Church, Van Meter, VMUMC" />
     <meta
       name="description"
-      content="The Van Meter United Methodist Church site provides users with dates, times and details for the worship and fellowship of the congregation."
-    />
+      content="The Van Meter United Methodist Church site provides users with dates, times and details for the worship and fellowship of the congregation." />
     <!-- Setting icon -->
     <link rel="icon" href="./images/umc-logo.png" />
   </head>
@@ -62,15 +46,11 @@
 
     <!-- Navbar section -->
     <div id="navbar-container" class="container mx-auto p-0">
-      <nav
-        class="navbar navbar-expand-lg navbar-dark bg-dark"
-        aria-label="Fifth navbar example"
-      >
+      <nav class="navbar navbar-expand-lg navbar-dark bg-dark" aria-label="Fifth navbar example">
         <div class="container-fluid">
           <!-- Brand -->
           <a class="navbar-brand" href="#"
-            ><img height="24" width="24" src="./images/white+umc+logo.png" />
-            VMUMC</a
+            ><img height="24" width="24" src="./images/white+umc+logo.png" /> VMUMC</a
           >
           <button
             class="navbar-toggler"
@@ -79,8 +59,7 @@
             data-bs-target="#navbarsExample05"
             aria-controls="navbarsExample05"
             aria-expanded="false"
-            aria-label="Toggle navigation"
-          >
+            aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
 
@@ -106,39 +85,27 @@
                 <ul class="dropdown-menu dropdown-menu-dark bg-dark shadow">
                   <!-- Dropdown item -->
                   <li>
-                    <a class="dropdown-item" href="/directions.html">
-                      Church Directions
-                    </a>
+                    <a class="dropdown-item" href="/directions.html"> Church Directions </a>
                   </li>
                   <!-- Dropdown item -->
                   <li>
-                    <a class="dropdown-item" href="/community.html">
-                      Church Community
-                    </a>
+                    <a class="dropdown-item" href="/community.html"> Church Community </a>
                   </li>
                   <!-- Dropdown item -->
                   <li>
-                    <a class="dropdown-item" href="/services.html">
-                      Church Services
-                    </a>
+                    <a class="dropdown-item" href="/services.html"> Church Services </a>
                   </li>
                   <!-- Dropdown item -->
                   <li>
-                    <a class="dropdown-item" href="/education.html">
-                      Christian Education
-                    </a>
+                    <a class="dropdown-item" href="/education.html"> Christian Education </a>
                   </li>
                   <!-- Dropdown item -->
                   <li>
-                    <a class="dropdown-item" href="/staff.html">
-                      Church Staff
-                    </a>
+                    <a class="dropdown-item" href="/staff.html"> Church Staff </a>
                   </li>
                   <!-- Dropdown item -->
                   <li>
-                    <a class="dropdown-item" href="/beliefs.html">
-                      Church Beliefs
-                    </a>
+                    <a class="dropdown-item" href="/beliefs.html"> Church Beliefs </a>
                   </li>
                 </ul>
               </li>
@@ -174,15 +141,11 @@
                 <ul class="dropdown-menu dropdown-menu-dark bg-dark">
                   <!-- Dropdown item -->
                   <li>
-                    <a class="dropdown-item" href="/contact.html">
-                      Contact Info
-                    </a>
+                    <a class="dropdown-item" href="/contact.html"> Contact Info </a>
                   </li>
                   <!-- Dropdown item -->
                   <li>
-                    <a class="dropdown-item" href="/prayer-request.html">
-                      Prayer Request
-                    </a>
+                    <a class="dropdown-item" href="/prayer-request.html"> Prayer Request </a>
                   </li>
                   <!-- Dropdown item -->
                   <li>
@@ -215,8 +178,7 @@
                 autocorrect="off"
                 autocomplete="off"
                 autocapitalize="off"
-                placeholder="Search"
-              />
+                placeholder="Search" />
             </div>
           </div>
         </div>
@@ -224,74 +186,92 @@
     </div>
     <!-- Main content section -->
     <div class="container mx-auto px-3 bg pb-5">
+      <!-- Header -->
       <div class="row pt-5 mx-auto text-center">
-        <h1>Learning About the Practices of Our Faith</h1>
+        <div class="col">
+          <h1>Learning About the Practices of Our Faith</h1>
+        </div>
       </div>
-      <div class="row pt-3 mx-auto text-center"><h2>Ash Wednesday</h2></div>
-      <div class="row pt-3 mx-auto text-center"><hr /></div>
+      <!-- Secondary Header -->
+      <div class="row pt-3 mx-auto text-center">
+        <div class="col">
+          <h2>Ash Wednesday</h2>
+        </div>
+      </div>
+      <!-- Divider -->
+      <div class="row pt-3 mx-auto text-center">
+        <div class="col">
+          <hr />
+        </div>
+      </div>
+
       <div class="row pt-3 mx-auto">
-        <!-- Column with width 6 for spacing -->
+        <!-- Heading Section -->
         <div class="col-lg-6 align-self-center text-center">
           <div class="row">
+            <!-- Pastors Image -->
             <div class="col-lg-4">
-              <img
-                class="w-50 w-lg-100 rounded"
-                src="./images/PastorBeth2.jpg"
-                alt="Pastor Beth"
-              />
+              <img class="w-50 w-lg-100 rounded" src="./images/PastorBeth2.jpg" alt="Pastor Beth" />
               <p>Rev. Beth</p>
             </div>
+            <!-- Secondary Header -->
             <div class="col-lg-8 align-self-center text-center pb-lg-4">
-              <h2>
-                What is ASH Wednesday and why do we receive an ash cross on our
-                foreheads?
-              </h2>
+              <div class="col">
+                <h2>What is ASH Wednesday and why do we receive an ash cross on our foreheads?</h2>
+              </div>
             </div>
           </div>
         </div>
-        <!-- Column with width 2, vertically centered and text centered -->
+        <!-- Ash Wednesday Pastors Message Section -->
         <div class="col-lg-6">
+          <!-- Pastors Message Paragraph 1 -->
           <div class="row">
-            <p>
-              Ash Wednesday signals the beginning of the Lenten season, a 40-day
-              period (plus Sundays) during which Christians worldwide prepare
-              our hearts for Jesus' death on the cross and for his resurrection
-              three days later on Easter.
-            </p>
+            <div class="col">
+              <p>
+                Ash Wednesday signals the beginning of the Lenten season, a 40-day period (plus
+                Sundays) during which Christians worldwide prepare our hearts for Jesus' death on
+                the cross and for his resurrection three days later on Easter.
+              </p>
+            </div>
           </div>
+          <!-- Pastors Message Paragraph 2 -->
           <div class="row">
-            <p>
-              Many Christians observe this day with the ancient tradition of
-              marking themselves with a cross of ashes on their foreheads. It is
-              an intentional and sacred act of reflecting on grief and mortality
-              in this world.
-            </p>
+            <div class="col">
+              <p>
+                Many Christians observe this day with the ancient tradition of marking themselves
+                with a cross of ashes on their foreheads. It is an intentional and sacred act of
+                reflecting on grief and mortality in this world.
+              </p>
+            </div>
           </div>
+          <!-- Pastors Message Paragraph 3 -->
           <div class="row">
-            <p>
-              <em>For you are dust, and to dust you shall return </em>- Genesis
-              3:19
-            </p>
+            <div class="col">
+              <p><em>For you are dust, and to dust you shall return </em>- Genesis 3:19</p>
+            </div>
           </div>
+          <!-- Pastors Message Paragraph 4 -->
           <div class="row">
-            <p>
-              The cross both marks us and reminds us that the ashes are only the
-              beginning. It claims us as not being of this material world and
-              finite time, but of the Kingdom of God and eternity. We mourn what
-              there is to lose, and celebrate the hope of all that is to come as
-              we embrace the new reality in Christ.
-            </p>
+            <div class="col">
+              <p>
+                The cross both marks us and reminds us that the ashes are only the beginning. It
+                claims us as not being of this material world and finite time, but of the Kingdom of
+                God and eternity. We mourn what there is to lose, and celebrate the hope of all that
+                is to come as we embrace the new reality in Christ.
+              </p>
+            </div>
           </div>
+          <!-- Pastors Message Paragraph 5 -->
           <div class="row">
-            <p>
-              In a way, it is much like marking a trailhead before beginning a
-              journey down a long path. We pause and acknowledge the known world
-              and its troubles, which are very much there but are also about to
-              be behind us. We take a moment to breathe, remove our shoes as we
-              walk on sacred ground, say a prayer, and take those first steps
-              into the wilderness, the wilderness that sits just before the
-              awakening of mystery and Grace.
-            </p>
+            <div class="col">
+              <p>
+                In a way, it is much like marking a trailhead before beginning a journey down a long
+                path. We pause and acknowledge the known world and its troubles, which are very much
+                there but are also about to be behind us. We take a moment to breathe, remove our
+                shoes as we walk on sacred ground, say a prayer, and take those first steps into the
+                wilderness, the wilderness that sits just before the awakening of mystery and Grace.
+              </p>
+            </div>
           </div>
         </div>
       </div>
@@ -300,20 +280,13 @@
     <footer class="mb-sm-3 container mx-auto p-0">
       <div class="row mx-auto bg-dark shadow text-white rounded-sm-bottom">
         <!-- UMC Logo -->
-        <div
-          class="col-lg-1 col-md-2 col-sm-12 mt-2 mb-2 align-self-center text-center"
-        >
-          <a href="#"
-            ><img height="60" width="60" src="./images/white+umc+logo.png"
-          /></a>
+        <div class="col-lg-1 col-md-2 col-sm-12 mt-2 mb-2 align-self-center text-center">
+          <a href="#"><img height="60" width="60" src="./images/white+umc+logo.png" /></a>
         </div>
         <!-- Copyright Info -->
-        <div
-          class="col-lg-8 col-md-10 col-sm-12 mt-2 align-self-center text-center text-md-start"
-        >
+        <div class="col-lg-8 col-md-10 col-sm-12 mt-2 align-self-center text-center text-md-start">
           <p>
-            &copy; <span id="year"></span> - Van Meter United Methodist Church.
-            All rights reserved.
+            &copy; <span id="year"></span> - Van Meter United Methodist Church. All rights reserved.
           </p>
         </div>
         <!-- Social Media Text -->
@@ -321,9 +294,7 @@
           <p>Stay Connected</p>
         </div>
         <!-- Social Media Image -->
-        <div
-          class="col-lg-1 mt-2 ps-lg-0 mb-3 text-center text-lg-start align-self-center"
-        >
+        <div class="col-lg-1 mt-2 ps-lg-0 mb-3 text-center text-lg-start align-self-center">
           <a href="https://www.facebook.com/profile.php?id=100064317144537"
             ><img height="35" width="35" src="./images/facebook.png"
           /></a>
