--- a/scholarships.html
+++ b/scholarships.html
@@ -2,18 +2,8 @@
 <html lang="en">
   <head>
     <!-- Preloading images for faster loading -->
-    <link
-      rel="preload"
-      href="./images/websitebanner.webp"
-      as="image"
-      fetchpriority="high"
-    />
-    <link
-      rel="preload"
-      href="./images/websitebanner.jpg"
-      as="image"
-      fetchpriority="high"
-    />
+    <link rel="preload" href="./images/websitebanner.webp" as="image" fetchpriority="high" />
+    <link rel="preload" href="./images/websitebanner.jpg" as="image" fetchpriority="high" />
 
     <!-- Linking required Javascript files -->
     <script src="navbar.js" defer></script>
@@ -23,26 +13,20 @@
     <!-- Linking required CSS files -->
     <link
       rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
-    />
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" />
     <link
       rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/@tarekraafat/autocomplete.js@10.2.7/dist/css/autoComplete.01.min.css"
-    />
+      href="https://cdn.jsdelivr.net/npm/@tarekraafat/autocomplete.js@10.2.7/dist/css/autoComplete.01.min.css" />
     <link rel="stylesheet" href="./index.css" />
 
     <!-- Setting metadata -->
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Church Scholarships - Van Meter United Methodist Church</title>
-    <meta
-      name="keywords"
-      content="Van Meter United Methodist Church, Van Meter, VMUMC"
-    />
+    <meta name="keywords" content="Van Meter United Methodist Church, Van Meter, VMUMC" />
     <meta
       name="description"
-      content="The Van Meter United Methodist Church site provides users with dates, times and details for the worship and fellowship of the congregation."
-    />
+      content="The Van Meter United Methodist Church site provides users with dates, times and details for the worship and fellowship of the congregation." />
     <!-- Setting icon -->
     <link rel="icon" href="./images/umc-logo.png" />
   </head>
@@ -62,15 +46,11 @@
 
     <!-- Navbar section -->
     <div id="navbar-container" class="container mx-auto p-0">
-      <nav
-        class="navbar navbar-expand-lg navbar-dark bg-dark"
-        aria-label="Fifth navbar example"
-      >
+      <nav class="navbar navbar-expand-lg navbar-dark bg-dark" aria-label="Fifth navbar example">
         <div class="container-fluid">
           <!-- Brand -->
           <a class="navbar-brand" href="#"
-            ><img height="24" width="24" src="./images/white+umc+logo.png" />
-            VMUMC</a
+            ><img height="24" width="24" src="./images/white+umc+logo.png" /> VMUMC</a
           >
           <button
             class="navbar-toggler"
@@ -79,8 +59,7 @@
             data-bs-target="#navbarsExample05"
             aria-controls="navbarsExample05"
             aria-expanded="false"
-            aria-label="Toggle navigation"
-          >
+            aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
 
@@ -106,39 +85,27 @@
                 <ul class="dropdown-menu dropdown-menu-dark bg-dark shadow">
                   <!-- Dropdown item -->
                   <li>
-                    <a class="dropdown-item" href="/directions.html">
-                      Church Directions
-                    </a>
+                    <a class="dropdown-item" href="/directions.html"> Church Directions </a>
                   </li>
                   <!-- Dropdown item -->
                   <li>
-                    <a class="dropdown-item" href="/community.html">
-                      Church Community
-                    </a>
+                    <a class="dropdown-item" href="/community.html"> Church Community </a>
                   </li>
                   <!-- Dropdown item -->
                   <li>
-                    <a class="dropdown-item" href="/services.html">
-                      Church Services
-                    </a>
+                    <a class="dropdown-item" href="/services.html"> Church Services </a>
                   </li>
                   <!-- Dropdown item -->
                   <li>
-                    <a class="dropdown-item" href="/education.html">
-                      Christian Education
-                    </a>
+                    <a class="dropdown-item" href="/education.html"> Christian Education </a>
                   </li>
                   <!-- Dropdown item -->
                   <li>
-                    <a class="dropdown-item" href="/staff.html">
-                      Church Staff
-                    </a>
+                    <a class="dropdown-item" href="/staff.html"> Church Staff </a>
                   </li>
                   <!-- Dropdown item -->
                   <li>
-                    <a class="dropdown-item" href="/beliefs.html">
-                      Church Beliefs
-                    </a>
+                    <a class="dropdown-item" href="/beliefs.html"> Church Beliefs </a>
                   </li>
                 </ul>
               </li>
@@ -174,15 +141,11 @@
                 <ul class="dropdown-menu dropdown-menu-dark bg-dark">
                   <!-- Dropdown item -->
                   <li>
-                    <a class="dropdown-item" href="/contact.html">
-                      Contact Info
-                    </a>
+                    <a class="dropdown-item" href="/contact.html"> Contact Info </a>
                   </li>
                   <!-- Dropdown item -->
                   <li>
-                    <a class="dropdown-item" href="/prayer-request.html">
-                      Prayer Request
-                    </a>
+                    <a class="dropdown-item" href="/prayer-request.html"> Prayer Request </a>
                   </li>
                   <!-- Dropdown item -->
                   <li>
@@ -215,8 +178,7 @@
                 autocorrect="off"
                 autocomplete="off"
                 autocapitalize="off"
-                placeholder="Search"
-              />
+                placeholder="Search" />
             </div>
           </div>
         </div>
@@ -224,62 +186,84 @@
     </div>
     <!-- Main content section -->
     <div class="container mx-auto px-3 bg pb-5">
-      <div class="row pt-5 mx-auto text-center"><h1>UMC Scholarships</h1></div>
-      <div class="row pt-3 mx-auto"><hr /></div>
-      <div class="row pt-3 mx-auto text-center"><h3>Scholarships</h3></div>
+      <!-- Header -->
+      <div class="row pt-5 mx-auto text-center">
+        <div class="col">
+          <h1>UMC Scholarships</h1>
+        </div>
+      </div>
+      <!-- Divider -->
       <div class="row pt-3 mx-auto">
+        <div class="col">
+          <hr />
+        </div>
+      </div>
+      <!-- Secondary Header -->
+      <div class="row pt-3 mx-auto text-center">
+        <div class="col">
+          <h3>Scholarships</h3>
+        </div>
+      </div>
+      <!-- Scholarships Section -->
+      <div class="row pt-3 mx-auto">
+        <!-- Scholarship Paragraphs -->
         <div class="col-lg-6">
+          <!-- Scholarship Paragraph 1 -->
           <div class="row">
-            <p>
-              Graduating high school seniors and current college and
-              trade-school students who are active in the Van Meter UM church
-              are encouraged to apply for college or vocational scholarships. We
-              consider an active participant as one who regularly attends Sunday
-              School and church services, or who participates in church group
-              activities.
-            </p>
+            <div class="col">
+              <p>
+                Graduating high school seniors and current college and trade-school students who are
+                active in the Van Meter UM church are encouraged to apply for college or vocational
+                scholarships. We consider an active participant as one who regularly attends Sunday
+                School and church services, or who participates in church group activities.
+              </p>
+            </div>
           </div>
+          <!-- Scholarship Paragraph 2 -->
           <div class="row">
-            <p>
-              Scholarships are available from our church, from the Iowa United
-              Methodist Foundation, and at the national level from GBHEM, the
-              General Board of Higher Education and Ministry.
-            </p>
+            <div class="col">
+              <p>
+                Scholarships are available from our church, from the Iowa United Methodist
+                Foundation, and at the national level from GBHEM, the General Board of Higher
+                Education and Ministry.
+              </p>
+            </div>
           </div>
+          <!-- Scholarship Paragraph 3 -->
           <div class="row">
-            <p>
-              See Stacy Peterson or contact the church office for an application
-              for our church scholarship. Stacy can answer your scholarship
-              questions.
-            </p>
+            <div class="col">
+              <p>
+                See Stacy Peterson or contact the church office for an application for our church
+                scholarship. Stacy can answer your scholarship questions.
+              </p>
+            </div>
           </div>
+          <!-- Scholarship Paragraph 4 -->
           <div class="row">
-            <p>
-              For Iowa United Methodist Foundation scholarships, please
-              <a href="https://iumf.org/scholarships/"
-                >visit the Iowa United Methodist Foundation website</a
-              >. There you will find more information as well as application
-              forms.<strong>
-                IUMF applications must be postmarked no later than March
-                1</strong
-              >.
-            </p>
+            <div class="col">
+              <p>
+                For Iowa United Methodist Foundation scholarships, please
+                <a href="https://iumf.org/scholarships/"
+                  >visit the Iowa United Methodist Foundation website</a
+                >. There you will find more information as well as application forms.<strong>
+                  IUMF applications must be postmarked no later than March 1</strong
+                >.
+              </p>
+            </div>
           </div>
+          <!-- Scholarship Paragraph 5 -->
           <div class="row">
-            <p>
-              For GBHEM scholarships, please
-              <a href="https://www.gbhem.org/scholarships/"
-                >visit the GBHAM website</a
-              >.
-            </p>
+            <div class="col">
+              <p>
+                For GBHEM scholarships, please
+                <a href="https://www.gbhem.org/scholarships/">visit the GBHAM website</a>.
+              </p>
+            </div>
           </div>
         </div>
+        <!-- Scholarship Image -->
         <div class="col-lg-6 align-self-center text-center">
-          <img
-            class="w-75 rounded"
-            src="./images/scholarship.jpg"
-            alt="scholarships"
-          />
+          <img class="w-75 rounded" src="./images/scholarship.jpg" alt="scholarships" />
         </div>
       </div>
     </div>
@@ -287,20 +271,13 @@
     <footer class="mb-sm-3 container mx-auto p-0">
       <div class="row mx-auto bg-dark shadow text-white rounded-sm-bottom">
         <!-- UMC Logo -->
-        <div
-          class="col-lg-1 col-md-2 col-sm-12 mt-2 mb-2 align-self-center text-center"
-        >
-          <a href="#"
-            ><img height="60" width="60" src="./images/white+umc+logo.png"
-          /></a>
+        <div class="col-lg-1 col-md-2 col-sm-12 mt-2 mb-2 align-self-center text-center">
+          <a href="#"><img height="60" width="60" src="./images/white+umc+logo.png" /></a>
         </div>
         <!-- Copyright Info -->
-        <div
-          class="col-lg-8 col-md-10 col-sm-12 mt-2 align-self-center text-center text-md-start"
-        >
+        <div class="col-lg-8 col-md-10 col-sm-12 mt-2 align-self-center text-center text-md-start">
           <p>
-            &copy; <span id="year"></span> - Van Meter United Methodist Church.
-            All rights reserved.
+            &copy; <span id="year"></span> - Van Meter United Methodist Church. All rights reserved.
           </p>
         </div>
         <!-- Social Media Text -->
@@ -308,9 +285,7 @@
           <p>Stay Connected</p>
         </div>
         <!-- Social Media Image -->
-        <div
-          class="col-lg-1 mt-2 ps-lg-0 mb-3 text-center text-lg-start align-self-center"
-        >
+        <div class="col-lg-1 mt-2 ps-lg-0 mb-3 text-center text-lg-start align-self-center">
           <a href="https://www.facebook.com/profile.php?id=100064317144537"
             ><img height="35" width="35" src="./images/facebook.png"
           /></a>
